@@ -53,8 +53,8 @@ import java.awt.Color;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
-import com.lowagie.text.error_messages.MessageLocalization;
 
+import com.lowagie.text.error_messages.MessageLocalization;
 import com.lowagie.text.pdf.HyphenationEvent;
 import com.lowagie.text.pdf.PdfAction;
 import com.lowagie.text.pdf.PdfAnnotation;
@@ -71,15 +71,15 @@ import com.lowagie.text.pdf.draw.DrawInterface;
  * is added.
  * <P>
  * Example: <BLOCKQUOTE>
- * 
+ *
  * <PRE>
- * 
+ *
  * <STRONG>Chunk chunk = new Chunk("Hello world",
  * FontFactory.getFont(FontFactory.COURIER, 20, Font.ITALIC, new Color(255, 0,
  * 0))); </STRONG> document.add(chunk);
- * 
+ *
  * </PRE>
- * 
+ *
  * </BLOCKQUOTE>
  */
 
@@ -108,7 +108,7 @@ public class Chunk implements Element {
     protected Font font = null;
 
     /** Contains some of the attributes for this Chunk. */
-    protected HashMap attributes = null;
+    protected HashMap<String,Object> attributes = null;
 
     // constructors
 
@@ -123,7 +123,7 @@ public class Chunk implements Element {
     /**
      * A <CODE>Chunk</CODE> copy constructor.
      * @param ck the <CODE>Chunk</CODE> to be copied
-     */    
+     */
     public Chunk(Chunk ck) {
         if (ck.content != null) {
             content = new StringBuffer(ck.content.toString());
@@ -132,14 +132,14 @@ public class Chunk implements Element {
             font = new Font(ck.font);
         }
         if (ck.attributes != null) {
-            attributes = new HashMap(ck.attributes);
+            attributes = new HashMap<>(ck.attributes);
         }
     }
-    
+
     /**
      * Constructs a chunk of text with a certain content and a certain <CODE>
      * Font</CODE>.
-     * 
+     *
      * @param content
      *            the content
      * @param font
@@ -153,7 +153,7 @@ public class Chunk implements Element {
     /**
      * Constructs a chunk of text with a certain content, without specifying a
      * <CODE>Font</CODE>.
-     * 
+     *
      * @param content
      *            the content
      */
@@ -163,7 +163,7 @@ public class Chunk implements Element {
 
     /**
      * Constructs a chunk of text with a char and a certain <CODE>Font</CODE>.
-     * 
+     *
      * @param c
      *            the content
      * @param font
@@ -178,7 +178,7 @@ public class Chunk implements Element {
     /**
      * Constructs a chunk of text with a char, without specifying a <CODE>Font
      * </CODE>.
-     * 
+     *
      * @param c
      *            the content
      */
@@ -188,7 +188,7 @@ public class Chunk implements Element {
 
     /**
      * Constructs a chunk containing an <CODE>Image</CODE>.
-     * 
+     *
      * @param image
      *            the image
      * @param offsetX
@@ -209,7 +209,7 @@ public class Chunk implements Element {
      * @since    2.1.2
      */
     public static final String SEPARATOR = "SEPARATOR";
-    
+
     /**
      * Creates a separator Chunk.
      * Note that separator chunks can't be used in combination with tab chunks!
@@ -218,8 +218,8 @@ public class Chunk implements Element {
      */
     public Chunk(DrawInterface separator) {
         this(separator, false);
-    }    
-    
+    }
+
     /**
      * Creates a separator Chunk.
      * Note that separator chunks can't be used in combination with tab chunks!
@@ -237,7 +237,7 @@ public class Chunk implements Element {
      * @since    2.1.2
      */
     public static final String TAB = "TAB";
-    
+
     /**
      * Creates a tab Chunk.
      * Note that separator chunks can't be used in combination with tab chunks!
@@ -248,7 +248,7 @@ public class Chunk implements Element {
     public Chunk(DrawInterface separator, float tabPosition) {
         this(separator, tabPosition, false);
     }
-    
+
     /**
      * Creates a tab Chunk.
      * Note that separator chunks can't be used in combination with tab chunks!
@@ -267,7 +267,7 @@ public class Chunk implements Element {
 
     /**
      * Constructs a chunk containing an <CODE>Image</CODE>.
-     * 
+     *
      * @param image
      *            the image
      * @param offsetX
@@ -289,7 +289,7 @@ public class Chunk implements Element {
     /**
      * Processes the element by adding it (or the different parts) to an <CODE>
      * ElementListener</CODE>.
-     * 
+     *
      * @param listener
      *            an <CODE>ElementListener</CODE>
      * @return <CODE>true</CODE> if the element was processed successfully
@@ -304,7 +304,7 @@ public class Chunk implements Element {
 
     /**
      * Gets the type of the text element.
-     * 
+     *
      * @return a type
      */
     public int type() {
@@ -313,11 +313,11 @@ public class Chunk implements Element {
 
     /**
      * Gets all the chunks in this element.
-     * 
+     *
      * @return an <CODE>ArrayList</CODE>
      */
-    public ArrayList getChunks() {
-        ArrayList tmp = new ArrayList();
+    public ArrayList<Chunk> getChunks() {
+        ArrayList<Chunk> tmp = new ArrayList<>();
         tmp.add(this);
         return tmp;
     }
@@ -326,7 +326,7 @@ public class Chunk implements Element {
 
     /**
      * appends some text to this <CODE>Chunk</CODE>.
-     * 
+     *
      * @param string
      *            <CODE>String</CODE>
      * @return a <CODE>StringBuffer</CODE>
@@ -337,7 +337,7 @@ public class Chunk implements Element {
 
     /**
      * Sets the font of this <CODE>Chunk</CODE>.
-     * 
+     *
      * @param font
      *            a <CODE>Font</CODE>
      */
@@ -349,7 +349,7 @@ public class Chunk implements Element {
 
     /**
      * Gets the font of this <CODE>Chunk</CODE>.
-     * 
+     *
      * @return a <CODE>Font</CODE>
      */
     public Font getFont() {
@@ -358,7 +358,7 @@ public class Chunk implements Element {
 
     /**
      * Returns the content of this <CODE>Chunk</CODE>.
-     * 
+     *
      * @return a <CODE>String</CODE>
      */
     public String getContent() {
@@ -367,7 +367,7 @@ public class Chunk implements Element {
 
     /**
      * Returns the content of this <CODE>Chunk</CODE>.
-     * 
+     *
      * @return a <CODE>String</CODE>
      */
     public String toString() {
@@ -376,7 +376,7 @@ public class Chunk implements Element {
 
     /**
      * Checks is this <CODE>Chunk</CODE> is empty.
-     * 
+     *
      * @return <CODE>false</CODE> if the Chunk contains other characters than
      *         space.
      */
@@ -388,7 +388,7 @@ public class Chunk implements Element {
 
     /**
      * Gets the width of the Chunk in points.
-     * 
+     *
      * @return a width in points
      */
     public float getWidthPoint() {
@@ -404,7 +404,7 @@ public class Chunk implements Element {
 
     /**
      * Checks the attributes of this <CODE>Chunk</CODE>.
-     * 
+     *
      * @return false if there aren't any.
      */
 
@@ -416,11 +416,11 @@ public class Chunk implements Element {
      * Gets the attributes for this <CODE>Chunk</CODE>.
      * <P>
      * It may be null.
-     * 
+     *
      * @return the attributes for this <CODE>Chunk</CODE>
      */
 
-    public HashMap getAttributes() {
+    public HashMap<String,Object> getAttributes() {
         return attributes;
     }
 
@@ -428,13 +428,13 @@ public class Chunk implements Element {
      * Sets the attributes all at once.
      * @param    attributes    the attributes of a Chunk
      */
-    public void setAttributes(HashMap attributes) {
+    public void setAttributes(HashMap<String,Object> attributes) {
         this.attributes = attributes;
     }
 
     /**
      * Sets an arbitrary attribute.
-     * 
+     *
      * @param name
      *            the key for the attribute
      * @param obj
@@ -444,7 +444,7 @@ public class Chunk implements Element {
 
     private Chunk setAttribute(String name, Object obj) {
         if (attributes == null)
-            attributes = new HashMap();
+            attributes = new HashMap<>();
         attributes.put(name, obj);
         return this;
     }
@@ -457,7 +457,7 @@ public class Chunk implements Element {
     /**
      * Sets the text horizontal scaling. A value of 1 is normal and a value of
      * 0.5f shrinks the text to half it's width.
-     * 
+     *
      * @param scale
      *            the horizontal scaling factor
      * @return this <CODE>Chunk</CODE>
@@ -468,7 +468,7 @@ public class Chunk implements Element {
 
     /**
      * Gets the horizontal scaling.
-     * 
+     *
      * @return a percentage in float
      */
     public float getHorizontalScaling() {
@@ -488,7 +488,7 @@ public class Chunk implements Element {
      * Actually, the line can be anywhere vertically and has always the <CODE>
      * Chunk</CODE> width. Multiple call to this method will produce multiple
      * lines.
-     * 
+     *
      * @param thickness
      *            the absolute thickness of the line
      * @param yPosition
@@ -505,7 +505,7 @@ public class Chunk implements Element {
      * Actually, the line can be anywhere vertically and has always the <CODE>
      * Chunk</CODE> width. Multiple call to this method will produce multiple
      * lines.
-     * 
+     *
      * @param color
      *            the color of the line or <CODE>null</CODE> to follow the
      *            text color
@@ -526,7 +526,7 @@ public class Chunk implements Element {
     public Chunk setUnderline(Color color, float thickness, float thicknessMul,
             float yPosition, float yPositionMul, int cap) {
         if (attributes == null)
-            attributes = new HashMap();
+            attributes = new HashMap<>();
         Object[] obj = {
                 color,
                 new float[]{thickness, thicknessMul, yPosition, yPositionMul, cap}};
@@ -534,16 +534,16 @@ public class Chunk implements Element {
                 obj);
         return setAttribute(UNDERLINE, unders);
     }
-    
+
     /** Key for sub/superscript. */
     public static final String SUBSUPSCRIPT = "SUBSUPSCRIPT";
-    
+
     /**
      * Sets the text displacement relative to the baseline. Positive values rise
      * the text, negative values lower the text.
      * <P>
      * It can be used to implement sub/superscript.
-     * 
+     *
      * @param rise
      *            the displacement in points
      * @return this <CODE>Chunk</CODE>
@@ -555,7 +555,7 @@ public class Chunk implements Element {
 
     /**
      * Gets the text displacement relative to the baseline.
-     * 
+     *
      * @return a displacement in points
      */
     public float getTextRise() {
@@ -572,7 +572,7 @@ public class Chunk implements Element {
     /**
      * Skews the text to simulate italic and other effects. Try <CODE>alpha=0
      * </CODE> and <CODE>beta=12</CODE>.
-     * 
+     *
      * @param alpha
      *            the first angle in degrees
      * @param beta
@@ -590,7 +590,7 @@ public class Chunk implements Element {
 
     /**
      * Sets the color of the background <CODE>Chunk</CODE>.
-     * 
+     *
      * @param color
      *            the color of the background
      * @return this <CODE>Chunk</CODE>
@@ -601,7 +601,7 @@ public class Chunk implements Element {
 
     /**
      * Sets the color and the size of the background <CODE>Chunk</CODE>.
-     * 
+     *
      * @param color
      *            the color of the background
      * @param extraLeft
@@ -626,7 +626,7 @@ public class Chunk implements Element {
     /**
      * Sets the text rendering mode. It can outline text, simulate bold and make
      * text invisible.
-     * 
+     *
      * @param mode
      *            the text rendering mode. It can be <CODE>
      *            PdfContentByte.TEXT_RENDER_MODE_FILL</CODE>,<CODE>
@@ -644,7 +644,7 @@ public class Chunk implements Element {
      */
     public Chunk setTextRenderMode(int mode, float strokeWidth,
             Color strokeColor) {
-        return setAttribute(TEXTRENDERMODE, new Object[] { new Integer(mode),
+        return setAttribute(TEXTRENDERMODE, new Object[] { Integer.valueOf(mode),
                 new Float(strokeWidth), strokeColor });
     }
 
@@ -653,7 +653,7 @@ public class Chunk implements Element {
 
     /**
      * Sets the split characters.
-     * 
+     *
      * @param splitCharacter
      *            the <CODE>SplitCharacter</CODE> interface
      * @return this <CODE>Chunk</CODE>
@@ -665,10 +665,10 @@ public class Chunk implements Element {
 
     /** Key for hyphenation. */
     public static final String HYPHENATION = "HYPHENATION";
-    
+
     /**
      * sets the hyphenation engine to this <CODE>Chunk</CODE>.
-     * 
+     *
      * @param hyphenation
      *            the hyphenation engine
      * @return this <CODE>Chunk</CODE>
@@ -682,7 +682,7 @@ public class Chunk implements Element {
 
     /**
      * Sets a goto for a remote destination for this <CODE>Chunk</CODE>.
-     * 
+     *
      * @param filename
      *            the file name of the destination document
      * @param name
@@ -696,7 +696,7 @@ public class Chunk implements Element {
 
     /**
      * Sets a goto for a remote destination for this <CODE>Chunk</CODE>.
-     * 
+     *
      * @param filename
      *            the file name of the destination document
      * @param page
@@ -706,17 +706,17 @@ public class Chunk implements Element {
 
     public Chunk setRemoteGoto(String filename, int page) {
         return setAttribute(REMOTEGOTO, new Object[] { filename,
-                new Integer(page) });
+                Integer.valueOf(page) });
     }
 
     /** Key for local goto. */
     public static final String LOCALGOTO = "LOCALGOTO";
-    
+
     /**
      * Sets a local goto for this <CODE>Chunk</CODE>.
      * <P>
      * There must be a local destination matching the name.
-     * 
+     *
      * @param name
      *            the name of the destination to go to
      * @return this <CODE>Chunk</CODE>
@@ -731,7 +731,7 @@ public class Chunk implements Element {
 
     /**
      * Sets a local destination for this <CODE>Chunk</CODE>.
-     * 
+     *
      * @param name
      *            the name for this destination
      * @return this <CODE>Chunk</CODE>
@@ -747,7 +747,7 @@ public class Chunk implements Element {
      * Sets the generic tag <CODE>Chunk</CODE>.
      * <P>
      * The text for this tag can be retrieved with <CODE>PdfPageEvent</CODE>.
-     * 
+     *
      * @param text
      *            the text for the tag
      * @return this <CODE>Chunk</CODE>
@@ -756,13 +756,13 @@ public class Chunk implements Element {
     public Chunk setGenericTag(String text) {
         return setAttribute(GENERICTAG, text);
     }
-    
+
     /** Key for image. */
     public static final String IMAGE = "IMAGE";
 
     /**
      * Returns the image.
-     * 
+     *
      * @return the image
      */
 
@@ -772,17 +772,15 @@ public class Chunk implements Element {
         Object[] obj = (Object[]) attributes.get(Chunk.IMAGE);
         if (obj == null)
             return null;
-        else {
-            return (Image) obj[0];
-        }
+        return (Image) obj[0];
     }
-    
+
     /** Key for Action. */
     public static final String ACTION = "ACTION";
 
     /**
      * Sets an action for this <CODE>Chunk</CODE>.
-     * 
+     *
      * @param action
      *            the action
      * @return this <CODE>Chunk</CODE>
@@ -794,7 +792,7 @@ public class Chunk implements Element {
 
     /**
      * Sets an anchor for this <CODE>Chunk</CODE>.
-     * 
+     *
      * @param url
      *            the <CODE>URL</CODE> to link to
      * @return this <CODE>Chunk</CODE>
@@ -806,7 +804,7 @@ public class Chunk implements Element {
 
     /**
      * Sets an anchor for this <CODE>Chunk</CODE>.
-     * 
+     *
      * @param url
      *            the url to link to
      * @return this <CODE>Chunk</CODE>
@@ -815,13 +813,13 @@ public class Chunk implements Element {
     public Chunk setAnchor(String url) {
         return setAttribute(ACTION, new PdfAction(url));
     }
-    
+
     /** Key for newpage. */
     public static final String NEWPAGE = "NEWPAGE";
 
     /**
      * Sets a new page tag..
-     * 
+     *
      * @return this <CODE>Chunk</CODE>
      */
 
@@ -834,7 +832,7 @@ public class Chunk implements Element {
 
     /**
      * Sets a generic annotation to this <CODE>Chunk</CODE>.
-     * 
+     *
      * @param annotation
      *            the annotation
      * @return this <CODE>Chunk</CODE>
@@ -842,7 +840,7 @@ public class Chunk implements Element {
     public Chunk setAnnotation(PdfAnnotation annotation) {
         return setAttribute(PDFANNOTATION, annotation);
     }
-    
+
     /**
      * @see com.lowagie.text.Element#isContent()
      * @since    iText 2.0.8
@@ -867,9 +865,9 @@ public class Chunk implements Element {
         if (attributes == null) return null;
         return (HyphenationEvent) attributes.get(Chunk.HYPHENATION);
     }
-    
+
     // keys used in PdfChunk
-    
+
     /** Key for color. */
     public static final String COLOR = "COLOR";
 
@@ -883,17 +881,17 @@ public class Chunk implements Element {
 
     /**
      * Sets the character spacing.
-     * 
+     *
      * @param charSpace the character spacing value
      * @return this <CODE>Chunk</CODE>
      */
     public Chunk setCharacterSpacing(float charSpace) {
         return setAttribute(CHAR_SPACING, new Float(charSpace));
     }
-    
+
     /**
      * Gets the character spacing.
-     * 
+     *
      * @return a value in float
      */
     public float getCharacterSpacing() {
