@@ -53,6 +53,7 @@ package com.lowagie.text;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
+
 import com.lowagie.text.error_messages.MessageLocalization;
 
 /**
@@ -81,7 +82,7 @@ import com.lowagie.text.error_messages.MessageLocalization;
  * </PRE></BLOCKQUOTE>
  */
 
-public class Section extends ArrayList implements TextElementArray, LargeElement {
+public class Section extends ArrayList<Element> implements ComposedElement<Element>, TextElementArray, LargeElement {
     // constant
     /**
      * A possible number style. The default number style: "1.2.3."
@@ -93,76 +94,76 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
      * @since    iText 2.0.8
      */
     public static final int NUMBERSTYLE_DOTTED_WITHOUT_FINAL_DOT = 1;
-    
+
     /** A serial version uid. */
     private static final long serialVersionUID = 3324172577544748043L;
 
     // member variables
-    
+
     /** The title of this section. */
     protected Paragraph title;
-    
+
     /** The bookmark title if different from the content title */
     protected String bookmarkTitle;
 
     /** The number of sectionnumbers that has to be shown before the section title. */
     protected int numberDepth;
-    
+
     /**
      * The style for sectionnumbers.
      * @since    iText 2.0.8
      */
     protected int numberStyle = NUMBERSTYLE_DOTTED;
-    
+
     /** The indentation of this section on the left side. */
     protected float indentationLeft;
-    
+
     /** The indentation of this section on the right side. */
     protected float indentationRight;
-    
+
     /** The additional indentation of the content of this section. */
     protected float indentation;
-    
+
     /** false if the bookmark children are not visible */
     protected boolean bookmarkOpen = true;
-    
+
     /** true if the section has to trigger a new page */
     protected boolean triggerNewPage = false;
-    
+
     /** This is the number of subsections. */
     protected int subsections = 0;
-    
+
     /** This is the complete list of sectionnumbers of this section and the parents of this section. */
-    protected ArrayList numbers = null;
-    
+    protected ArrayList<Integer> numbers = null;
+
     /**
      * Indicates if the Section will be complete once added to the document.
      * @since    iText 2.0.8
      */
     protected boolean complete = true;
-    
+
     /**
      * Indicates if the Section was added completely to the document.
      * @since    iText 2.0.8
      */
     protected boolean addedCompletely = false;
-    
+
     /**
      * Indicates if this is the first time the section was added.
      * @since    iText 2.0.8
      */
     protected boolean notAddedYet = true;
-    
+
     // constructors
-    
+
     /**
      * Constructs a new <CODE>Section</CODE>.
-     */    
+     */
     protected Section() {
         title = new Paragraph();
         numberDepth = 1;
     }
-    
+
     /**
      * Constructs a new <CODE>Section</CODE>.
      *
@@ -173,39 +174,23 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
         this.numberDepth = numberDepth;
         this.title = title;
     }
-    
+
     // implementation of the Element-methods
-    
-    /**
-     * Processes the element by adding it (or the different parts) to an
-     * <CODE>ElementListener</CODE>.
-     *
-     * @param    listener        the <CODE>ElementListener</CODE>
-     * @return    <CODE>true</CODE> if the element was processed successfully
-     */
-    public boolean process(ElementListener listener) {
-        try {
-            Element element;
-            for (Iterator i = iterator(); i.hasNext(); ) {
-                element = (Element)i.next();
-                listener.add(element);
-            }
-            return true;
-        }
-        catch(DocumentException de) {
-            return false;
-        }
+
+    @Override
+    public Collection<? extends Element> getChildren() {
+        return this;
     }
-    
+
     /**
      * Gets the type of the text element.
      *
      * @return    a type
-     */    
+     */
     public int type() {
         return Element.SECTION;
     }
-    
+
     /**
      * Checks if this object is a <CODE>Chapter</CODE>.
      *
@@ -215,7 +200,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public boolean isChapter() {
         return type() == Element.CHAPTER;
     }
-    
+
     /**
      * Checks if this object is a <CODE>Section</CODE>.
      *
@@ -225,20 +210,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public boolean isSection() {
         return type() == Element.SECTION;
     }
-    
-    /**
-     * Gets all the chunks in this element.
-     *
-     * @return    an <CODE>ArrayList</CODE>
-     */
-    public ArrayList getChunks() {
-        ArrayList tmp = new ArrayList();
-        for (Iterator i = iterator(); i.hasNext(); ) {
-            tmp.addAll(((Element) i.next()).getChunks());
-        }
-        return tmp;
-    }
-    
+
     /**
      * @see com.lowagie.text.Element#isContent()
      * @since    iText 2.0.8
@@ -254,23 +226,22 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public boolean isNestable() {
         return false;
     }
-    
+
     // overriding some of the ArrayList-methods
-    
+
     /**
      * Adds a <CODE>Paragraph</CODE>, <CODE>List</CODE> or <CODE>Table</CODE>
      * to this <CODE>Section</CODE>.
      *
      * @param    index    index at which the specified element is to be inserted
-     * @param    o       an object of type <CODE>Paragraph</CODE>, <CODE>List</CODE> or <CODE>Table</CODE>=
+     * @param    element       an object of type <CODE>Paragraph</CODE>, <CODE>List</CODE> or <CODE>Table</CODE>=
      * @throws    ClassCastException if the object is not a <CODE>Paragraph</CODE>, <CODE>List</CODE> or <CODE>Table</CODE>
      */
-    public void add(int index, Object o) {
+    public void add(int index, Element element) {
         if (isAddedCompletely()) {
             throw new IllegalStateException(MessageLocalization.getComposedMessage("this.largeelement.has.already.been.added.to.the.document"));
         }
         try {
-            Element element = (Element) o;
             if (element.isNestable()) {
                 super.add(index, element);
             }
@@ -282,34 +253,33 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
             throw new ClassCastException(MessageLocalization.getComposedMessage("insertion.of.illegal.element.1", cce.getMessage()));
         }
     }
-    
+
     /**
      * Adds a <CODE>Paragraph</CODE>, <CODE>List</CODE>, <CODE>Table</CODE> or another <CODE>Section</CODE>
      * to this <CODE>Section</CODE>.
      *
-     * @param    o       an object of type <CODE>Paragraph</CODE>, <CODE>List</CODE>, <CODE>Table</CODE> or another <CODE>Section</CODE>
+     * @param    element       an object of type <CODE>Paragraph</CODE>, <CODE>List</CODE>, <CODE>Table</CODE> or another <CODE>Section</CODE>
      * @return    a boolean
      * @throws    ClassCastException if the object is not a <CODE>Paragraph</CODE>, <CODE>List</CODE>, <CODE>Table</CODE> or <CODE>Section</CODE>
      */
-    public boolean add(Object o) {
+    public boolean add(Element element) {
         if (isAddedCompletely()) {
             throw new IllegalStateException(MessageLocalization.getComposedMessage("this.largeelement.has.already.been.added.to.the.document"));
         }
         try {
-            Element element = (Element) o;
             if (element.type() == Element.SECTION) {
-                Section section = (Section) o;
+                Section section = (Section) element;
                 section.setNumbers(++subsections, numbers);
                 return super.add(section);
             }
-            else if (o instanceof MarkedSection && ((MarkedObject)o).element.type() == Element.SECTION) {
-                MarkedSection mo = (MarkedSection)o;
+            else if (element instanceof MarkedObject<?> && ((MarkedObject<?>)element).element.type() == Element.SECTION) {
+                MarkedObject<?> mo = (MarkedObject<?>)element;
                 Section section = (Section)mo.element;
                 section.setNumbers(++subsections, numbers);
                 return super.add(mo);
             }
             else if (element.isNestable()) {
-                return super.add(o);
+                return super.add(element);
             }
             else {
                 throw new ClassCastException(MessageLocalization.getComposedMessage("you.can.t.add.a.1.to.a.section", element.getClass().getName()));
@@ -319,24 +289,9 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
             throw new ClassCastException(MessageLocalization.getComposedMessage("insertion.of.illegal.element.1", cce.getMessage()));
         }
     }
-    
-    /**
-     * Adds a collection of <CODE>Element</CODE>s
-     * to this <CODE>Section</CODE>.
-     *
-     * @param    collection    a collection of <CODE>Paragraph</CODE>s, <CODE>List</CODE>s and/or <CODE>Table</CODE>s
-     * @return    <CODE>true</CODE> if the action succeeded, <CODE>false</CODE> if not.
-     * @throws    ClassCastException if one of the objects isn't a <CODE>Paragraph</CODE>, <CODE>List</CODE>, <CODE>Table</CODE>
-     */
-    public boolean addAll(Collection collection) {
-        for (Iterator iterator = collection.iterator(); iterator.hasNext(); ) {
-            this.add(iterator.next());
-        }
-        return true;
-    }
-    
+
     // methods that return a Section
-    
+
     /**
      * Creates a <CODE>Section</CODE>, adds it to this <CODE>Section</CODE> and returns it.
      *
@@ -354,7 +309,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
         add(section);
         return section;
     }
-    
+
     /**
      * Creates a <CODE>Section</CODE>, adds it to this <CODE>Section</CODE> and returns it.
      *
@@ -365,7 +320,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public Section addSection(float indentation, Paragraph title) {
         return addSection(indentation, title, numberDepth + 1);
     }
-    
+
     /**
      * Creates a <CODE>Section</CODE>, add it to this <CODE>Section</CODE> and returns it.
      *
@@ -376,7 +331,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public Section addSection(Paragraph title, int numberDepth) {
         return addSection(0, title, numberDepth);
     }
-    
+
     /**
      * Adds a marked section. For use in class MarkedSection only!
      */
@@ -385,7 +340,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
         add(section);
         return section;
     }
-    
+
     /**
      * Creates a <CODE>Section</CODE>, adds it to this <CODE>Section</CODE> and returns it.
      *
@@ -395,7 +350,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public Section addSection(Paragraph title) {
         return addSection(0, title, numberDepth + 1);
     }
-    
+
     /**
      * Adds a <CODE>Section</CODE> to this <CODE>Section</CODE> and returns it.
      *
@@ -407,7 +362,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public Section addSection(float indentation, String title, int numberDepth) {
         return addSection(indentation, new Paragraph(title), numberDepth);
     }
-    
+
     /**
      * Adds a <CODE>Section</CODE> to this <CODE>Section</CODE> and returns it.
      *
@@ -418,7 +373,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public Section addSection(String title, int numberDepth) {
         return addSection(new Paragraph(title), numberDepth);
     }
-    
+
     /**
      * Adds a <CODE>Section</CODE> to this <CODE>Section</CODE> and returns it.
      *
@@ -429,7 +384,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public Section addSection(float indentation, String title) {
         return addSection(indentation, new Paragraph(title));
     }
-    
+
     /**
      * Adds a <CODE>Section</CODE> to this <CODE>Section</CODE> and returns it.
      *
@@ -439,9 +394,9 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public Section addSection(String title) {
         return addSection(new Paragraph(title));
     }
-    
+
     // public methods
-    
+
     /**
      * Sets the title of this section.
      *
@@ -459,7 +414,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public Paragraph getTitle() {
         return constructTitle(title, numbers, numberDepth, numberStyle);
     }
-    
+
     /**
      * Constructs a Paragraph that will be used as title for a Section or Chapter.
      * @param    title    the title of the section
@@ -469,7 +424,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
      * @return    a Paragraph object
      * @since    iText 2.0.8
      */
-    public static Paragraph constructTitle(Paragraph title, ArrayList numbers, int numberDepth, int numberStyle) {
+    public static Paragraph constructTitle(Paragraph title, ArrayList<Integer> numbers, int numberDepth, int numberStyle) {
         if (title == null) {
             return null;
         }
@@ -481,7 +436,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
         StringBuffer buf = new StringBuffer(" ");
         for (int i = 0; i < depth; i++) {
             buf.insert(0, ".");
-            buf.insert(0, ((Integer) numbers.get(i)).intValue());
+            buf.insert(0, numbers.get(i).intValue());
         }
         if (numberStyle == NUMBERSTYLE_DOTTED_WITHOUT_FINAL_DOT) {
             buf.deleteCharAt(buf.length() - 2);
@@ -490,7 +445,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
         result.add(0, new Chunk(buf.toString(), title.getFont()));
         return result;
     }
-    
+
     /**
      * Sets the depth of the sectionnumbers that will be shown preceding the title.
      * <P>
@@ -503,7 +458,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public void setNumberDepth(int numberDepth) {
         this.numberDepth = numberDepth;
     }
-    
+
     /**
      * Returns the numberdepth of this <CODE>Section</CODE>.
      *
@@ -522,7 +477,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public void setNumberStyle(int numberStyle) {
         this.numberStyle = numberStyle;
     }
-    
+
     /**
      * Gets the style used for numbering sections.
      * @since    iText 2.0.8
@@ -531,7 +486,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public int getNumberStyle() {
         return numberStyle;
     }
-    
+
     /**
      * Sets the indentation of this <CODE>Section</CODE> on the left side.
      *
@@ -549,7 +504,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public float getIndentationLeft() {
         return indentationLeft;
     }
-    
+
     /**
      * Sets the indentation of this <CODE>Section</CODE> on the right side.
      *
@@ -567,7 +522,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public float getIndentationRight() {
         return indentationRight;
     }
-    
+
     /**
      * Sets the indentation of the content of this <CODE>Section</CODE>.
      *
@@ -585,7 +540,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public float getIndentation() {
         return indentation;
     }
-    
+
     /** Setter for property bookmarkOpen.
      * @param bookmarkOpen false if the bookmark children are not
      * visible.
@@ -593,7 +548,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public void setBookmarkOpen(boolean bookmarkOpen) {
         this.bookmarkOpen = bookmarkOpen;
     }
-    
+
     /**
      * Getter for property bookmarkOpen.
      * @return Value of property bookmarkOpen.
@@ -601,7 +556,7 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public boolean isBookmarkOpen() {
         return bookmarkOpen;
     }
-    
+
     /**
      * Setter for property triggerNewPage.
      * @param triggerNewPage true if a new page has to be triggered.
@@ -617,12 +572,12 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public boolean isTriggerNewPage() {
         return triggerNewPage && notAddedYet;
     }
-    
+
     /**
      * Sets the bookmark title. The bookmark title is the same as the section title but
      * can be changed with this method.
      * @param bookmarkTitle the bookmark title
-     */    
+     */
     public void setBookmarkTitle(String bookmarkTitle) {
         this.bookmarkTitle = bookmarkTitle;
     }
@@ -630,24 +585,22 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     /**
      * Gets the bookmark title.
      * @return the bookmark title
-     */    
+     */
     public Paragraph getBookmarkTitle() {
         if (bookmarkTitle == null)
             return getTitle();
         else
             return new Paragraph(bookmarkTitle);
     }
-    
+
     /**
      * Changes the Chapter number.
      */
     public void setChapterNumber(int number) {
-        numbers.set(numbers.size() - 1, new Integer(number));
-        Object s;
-        for (Iterator i = iterator(); i.hasNext(); ) {
-            s = i.next();
-            if (s instanceof Section) {
-                ((Section)s).setChapterNumber(number);
+        numbers.set(numbers.size() - 1, Integer.valueOf(number));
+        for(Element e : getChildren()) {
+            if (e instanceof Section) {
+                ((Section)e).setChapterNumber(number);
             }
         }
     }
@@ -660,18 +613,18 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public int getDepth() {
         return numbers.size();
     }
-    
+
     // private methods
-    
+
     /**
      * Sets the number of this section.
      *
      * @param    number        the number of this section
      * @param    numbers        an <CODE>ArrayList</CODE>, containing the numbers of the Parent
      */
-    private void setNumbers(int number, ArrayList numbers) {
-        this.numbers = new ArrayList();
-        this.numbers.add(new Integer(number));
+    private void setNumbers(int number, ArrayList<Integer> numbers) {
+        this.numbers = new ArrayList<>();
+        this.numbers.add(Integer.valueOf(number));
         this.numbers.addAll(numbers);
     }
 
@@ -693,21 +646,21 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public void setNotAddedYet(boolean notAddedYet) {
         this.notAddedYet = notAddedYet;
     }
-    
+
     /**
      * @since    iText 2.0.8
      */
     protected boolean isAddedCompletely() {
         return addedCompletely;
     }
-    
+
     /**
      * @since    iText 2.0.8
      */
     protected void setAddedCompletely(boolean addedCompletely) {
         this.addedCompletely = addedCompletely;
     }
-    
+
     /**
      * @since    iText 2.0.8
      * @see com.lowagie.text.LargeElement#flushContent()
@@ -715,9 +668,8 @@ public class Section extends ArrayList implements TextElementArray, LargeElement
     public void flushContent() {
         setNotAddedYet(false);
         title = null;
-        Element element;
-        for (Iterator i = iterator(); i.hasNext(); ) {
-            element = (Element)i.next();
+        for (Iterator<? extends Element> i = getChildren().iterator(); i.hasNext(); ) {
+            Element element = i.next();
             if (element instanceof Section) {
                 Section s = (Section)element;
                 if (!s.isComplete() && size() == 1) {
