@@ -51,17 +51,17 @@ package com.lowagie.text.pdf;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.LinkedList;
+import java.util.Map;
 
 /**
  * This Class subsets a CFF Type Font. The subset is preformed for CID fonts and NON CID fonts.
- * The Charstring is subsetted for both types. For CID fonts only the FDArray which are used are embedded. 
+ * The Charstring is subsetted for both types. For CID fonts only the FDArray which are used are embedded.
  * The Lsubroutines of the FDArrays used are subsetted as well. The Subroutine subset supports both Type1 and Type2
  * formatting although only tested on Type2 Format.
- * For Non CID the Lsubroutines are subsetted. On both types the Gsubroutines is subsetted. 
- * A font which was not of CID type is transformed into CID as a part of the subset process. 
- * The CID synthetic creation was written by Sivan Toledo (sivan@math.tau.ac.il) 
+ * For Non CID the Lsubroutines are subsetted. On both types the Gsubroutines is subsetted.
+ * A font which was not of CID type is transformed into CID as a part of the subset process.
+ * The CID synthetic creation was written by Sivan Toledo (sivan@math.tau.ac.il)
  * @author Oren Manor (manorore@post.tau.ac.il) and Ygal Blum (blumygal@post.tau.ac.il)
  */
 public class CFFFontSubset extends CFFFont {
@@ -86,110 +86,109 @@ public class CFFFontSubset extends CFFFont {
             "random", "mul", "RESERVED_25", "sqrt", "dup", "exch", "index", "roll", "RESERVED_31",
             "RESERVED_32", "RESERVED_33", "hflex", "flex", "hflex1", "flex1", "RESERVED_REST"
     };
-    
+
     /**
     *  Operator codes for unused  CharStrings and unused local and global Subrs
     */
     static final byte ENDCHAR_OP = 14;
     static final byte RETURN_OP = 11;
-    
+
     /**
      * A HashMap containing the glyphs used in the text after being converted
-     * to glyph number by the CMap 
+     * to glyph number by the CMap
      */
-    HashMap GlyphsUsed;
+    Map<Integer,?> glyphsUsed;
     /**
      * The GlyphsUsed keys as an ArrayList
      */
-    ArrayList glyphsInList;
+    ArrayList<Integer> glyphsInList;
     /**
      * A HashMap for keeping the FDArrays being used by the font
      */
-    HashMap FDArrayUsed = new HashMap();
+    HashMap<Integer,?> fdArrayUsed = new HashMap<>();
     /**
      * A HashMaps array for keeping the subroutines used in each FontDict
      */
-    HashMap[] hSubrsUsed;
+    HashMap<Integer,?>[] hSubrsUsed;
     /**
      * The SubroutinesUsed HashMaps as ArrayLists
      */
-    ArrayList[] lSubrsUsed;
+    ArrayList<Integer>[] lSubrsUsed;
     /**
      * A HashMap for keeping the Global subroutines used in the font
      */
-    HashMap hGSubrsUsed  = new HashMap();
+    Map<Integer,?> hGSubrsUsed  = new HashMap<>();
     /**
      * The Global SubroutinesUsed HashMaps as ArrayLists
      */
-    ArrayList lGSubrsUsed = new ArrayList();
+    ArrayList<Integer> lGSubrsUsed = new ArrayList<>();
     /**
      * A HashMap for keeping the subroutines used in a non-cid font
      */
-    HashMap hSubrsUsedNonCID  = new HashMap();
+    Map<Integer,?> hSubrsUsedNonCID  = new HashMap<>();
     /**
      * The SubroutinesUsed HashMap as ArrayList
      */
-    ArrayList lSubrsUsedNonCID = new ArrayList();
+    ArrayList<Integer> lSubrsUsedNonCID = new ArrayList<>();
     /**
      * An array of the new Indexes for the local Subr. One index for each FontDict
      */
-    byte[][] NewLSubrsIndex;
+    byte[][] newLSubrsIndex;
     /**
      * The new subroutines index for a non-cid font
      */
-    byte[] NewSubrsIndexNonCID;
+    byte[] newSubrsIndexNonCID;
     /**
      * The new global subroutines index of the font
      */
-    byte[] NewGSubrsIndex;
+    byte[] newGSubrsIndex;
     /**
      * The new CharString of the font
      */
-    byte[] NewCharStringsIndex;
-    
+    byte[] newCharStringsIndex;
+
     /**
      * The bias for the global subroutines
      */
-    int GBias = 0;
-    
+    int gBias = 0;
+
     /**
      * The linked list for generating the new font stream
      */
-    LinkedList OutputList;
-    
+    LinkedList<Item> outputList;
+
     /**
      * Number of arguments to the stem operators in a subroutine calculated recursively
      */
     int NumOfHints=0;
 
-    
-    /**     
+
+    /**
      * C'tor for CFFFontSubset
      * @param rf - The font file
-     * @param GlyphsUsed - a HashMap that contains the glyph used in the subset 
+     * @param glyphsUsed - a HashMap that contains the glyph used in the subset
      */
-    public CFFFontSubset(RandomAccessFileOrArray rf,HashMap GlyphsUsed){
+    public CFFFontSubset(RandomAccessFileOrArray rf, Map<Integer,?> glyphsUsed) {
         // Use CFFFont c'tor in order to parse the font file.
         super(rf);
-        this.GlyphsUsed = GlyphsUsed;
+        this.glyphsUsed = glyphsUsed;
         //Put the glyphs into a list
-        glyphsInList = new ArrayList(GlyphsUsed.keySet());
-        
-        
+        glyphsInList = new ArrayList<>(glyphsUsed.keySet());
+
         for (int i=0;i<fonts.length;++i)
         {
             // Read the number of glyphs in the font
             seek(fonts[i].charstringsOffset);
             fonts[i].nglyphs = getCard16();
-            
+
             // Jump to the count field of the String Index
             seek(stringIndexOffset);
             fonts[i].nstrings = getCard16()+standardStrings.length;
-            
+
             // For each font save the offset array of the charstring
             fonts[i].charstringsOffsets = getIndex(fonts[i].charstringsOffset);
-            
-            // Process the FDSelect if exist 
+
+            // Process the FDSelect if exist
             if (fonts[i].fdselectOffset>=0)
             {
                 // Process the FDSelect
@@ -200,7 +199,7 @@ public class CFFFontSubset extends CFFFont {
             if (fonts[i].isCID)
                 // Build the FD Array used Hash Map
                 ReadFDArray(i);
-            // compute the charset length 
+            // compute the charset length
             fonts[i].CharsetLength = CountCharset(fonts[i].charsetOffset,fonts[i].nglyphs);
         }
     }
@@ -228,12 +227,10 @@ public class CFFFontSubset extends CFFFont {
             case 2:
                 Length = 1+4*CountRange(NumofGlyphs,2);
                 break;
-            default:
-                break;
         }
         return Length;
     }
-    
+
     /**
      * Function calculates the number of ranges in the Charset
      * @param NumofGlyphs The number of glyphs in the font
@@ -242,11 +239,11 @@ public class CFFFontSubset extends CFFFont {
      */
     int CountRange(int NumofGlyphs,int Type){
         int num=0;
-        char Sid;
+        char sid;
         int i=1,nLeft;
         while (i<NumofGlyphs){
             num++;
-            Sid = getCard16();
+            sid = getCard16();
             if (Type==1)
                 nLeft = getCard8();
             else
@@ -270,7 +267,7 @@ public class CFFFontSubset extends CFFFont {
         seek(fonts[Font].fdselectOffset);
         // Read the FDSelect's format
         fonts[Font].FDSelectFormat = getCard8();
-        
+
         switch(fonts[Font].FDSelectFormat){
             // Format==0 means each glyph has an entry that indicated
             // its FD.
@@ -312,10 +309,10 @@ public class CFFFontSubset extends CFFFont {
             default:
                 break;
         }
-        // Save the FDSelect of the font 
-        fonts[Font].FDSelect = FDSelect; 
+        // Save the FDSelect of the font
+        fonts[Font].FDSelect = FDSelect;
     }
-    
+
     /**
      * Function reads the FDSelect and builds the FDArrayUsed HashMap According to the glyphs used
      * @param Font the Number of font being processed
@@ -327,11 +324,11 @@ public class CFFFontSubset extends CFFFont {
         for (int i=0;i<glyphsInList.size();i++)
         {
             // Pop the glyphs index
-            int glyph = ((Integer)glyphsInList.get(i)).intValue();
+            int glyph = glyphsInList.get(i).intValue();
             // Pop the glyph's FD
             int FD = FDSelect[glyph];
             // Put the FD index into the FDArrayUsed HashMap
-            FDArrayUsed.put(new Integer(FD),null);
+            fdArrayUsed.put(Integer.valueOf(FD),null);
         }
     }
 
@@ -345,13 +342,13 @@ public class CFFFontSubset extends CFFFont {
         fonts[Font].FDArrayCount = getCard16();
         fonts[Font].FDArrayOffsize = getCard8();
         // Since we will change values inside the FDArray objects
-        // We increase its offsize to prevent errors 
+        // We increase its offsize to prevent errors
         if (fonts[Font].FDArrayOffsize < 4)
             fonts[Font].FDArrayOffsize++;
         fonts[Font].FDArrayOffsets = getIndex(fonts[Font].fdarrayOffset);
     }
 
-    
+
     /**
      * The Process function extracts one font out of the CFF file and returns a
      * subset version of the original.
@@ -361,7 +358,7 @@ public class CFFFontSubset extends CFFFont {
      */
     public byte[] Process(String fontName)throws IOException{
         try
-        {    
+        {
             // Verify that the file is open
             buf.reOpen();
             // Find the Font that we will be dealing with
@@ -369,16 +366,16 @@ public class CFFFontSubset extends CFFFont {
             for (j=0; j<fonts.length; j++)
                 if (fontName.equals(fonts[j].name)) break;
             if (j==fonts.length) return null;
-            
+
             // Calc the bias for the global subrs
             if (gsubrIndexOffset >= 0)
-                GBias = CalcBias(gsubrIndexOffset,j);
+                gBias = CalcBias(gsubrIndexOffset,j);
 
             // Prepare the new CharStrings Index
             BuildNewCharString(j);
              // Prepare the new Global and Local Subrs Indices
             BuildNewLGSubrs(j);
-            // Build the new file 
+            // Build the new file
             byte[] Ret = BuildNewFile(j);
             return Ret;
         }
@@ -403,7 +400,7 @@ public class CFFFontSubset extends CFFFont {
     {
         seek(Offset);
         int nSubrs = getCard16();
-        // If type==1 -> bias=0 
+        // If type==1 -> bias=0
         if (fonts[Font].CharstringType == 1)
             return 0;
         // else calc according to the count
@@ -420,14 +417,14 @@ public class CFFFontSubset extends CFFFont {
      * @param FontIndex the font
      * @throws IOException
      */
-    protected void BuildNewCharString(int FontIndex) throws IOException 
+    protected void BuildNewCharString(int FontIndex) throws IOException
     {
-        NewCharStringsIndex = BuildNewIndex(fonts[FontIndex].charstringsOffsets,GlyphsUsed,ENDCHAR_OP);
+        newCharStringsIndex = buildNewIndex(fonts[FontIndex].charstringsOffsets, glyphsUsed, ENDCHAR_OP);
     }
-    
+
     /**
-     * Function builds the new local & global subsrs indices. IF CID then All of 
-     * the FD Array lsubrs will be subsetted. 
+     * Function builds the new local & global subsrs indices. IF CID then All of
+     * the FD Array lsubrs will be subsetted.
      * @param Font the font
      * @throws IOException
      */
@@ -442,32 +439,32 @@ public class CFFFontSubset extends CFFFont {
             hSubrsUsed = new HashMap[fonts[Font].fdprivateOffsets.length];
             lSubrsUsed = new ArrayList[fonts[Font].fdprivateOffsets.length];
             // A [][] which will store the byte array for each new FD Array lsubs index
-            NewLSubrsIndex = new byte[fonts[Font].fdprivateOffsets.length][];
-            // An array to hold the offset for each Lsubr index 
+            newLSubrsIndex = new byte[fonts[Font].fdprivateOffsets.length][];
+            // An array to hold the offset for each Lsubr index
             fonts[Font].PrivateSubrsOffset = new int[fonts[Font].fdprivateOffsets.length];
-            // A [][] which will store the offset array for each lsubr index            
+            // A [][] which will store the offset array for each lsubr index
             fonts[Font].PrivateSubrsOffsetsArray = new int[fonts[Font].fdprivateOffsets.length][];
-            
+
             // Put the FDarrayUsed into a list
-            ArrayList FDInList = new ArrayList(FDArrayUsed.keySet());
-            // For each FD array which is used subset the lsubr 
-            for (int j=0;j<FDInList.size();j++)
+            ArrayList<Integer> fdInList = new ArrayList<>(fdArrayUsed.keySet());
+            // For each FD array which is used subset the lsubr
+            for (int j=0;j<fdInList.size();j++)
             {
                 // The FDArray index, Hash Map, Array List to work on
-                int FD = ((Integer)FDInList.get(j)).intValue();
-                hSubrsUsed[FD] = new HashMap();
-                lSubrsUsed[FD] = new ArrayList();
-                //Reads the private dicts looking for the subr operator and 
+                int FD = fdInList.get(j).intValue();
+                hSubrsUsed[FD] = new HashMap<>();
+                lSubrsUsed[FD] = new ArrayList<>();
+                //Reads the private dicts looking for the subr operator and
                 // store both the offset for the index and its offset array
                 BuildFDSubrsOffsets(Font,FD);
                 // Verify that FDPrivate has a LSubrs index
                 if(fonts[Font].PrivateSubrsOffset[FD]>=0)
                 {
-                    //Scans the Charstring data storing the used Local and Global subroutines 
-                    // by the glyphs. Scans the Subrs recursively. 
-                    BuildSubrUsed(Font,FD,fonts[Font].PrivateSubrsOffset[FD],fonts[Font].PrivateSubrsOffsetsArray[FD],hSubrsUsed[FD],lSubrsUsed[FD]);
+                    //Scans the Charstring data storing the used Local and Global subroutines
+                    // by the glyphs. Scans the Subrs recursively.
+                    buildSubrUsed(Font,FD,fonts[Font].PrivateSubrsOffset[FD],fonts[Font].PrivateSubrsOffsetsArray[FD],hSubrsUsed[FD],lSubrsUsed[FD]);
                     // Builds the New Local Subrs index
-                    NewLSubrsIndex[FD] = BuildNewIndex(fonts[Font].PrivateSubrsOffsetsArray[FD],hSubrsUsed[FD],RETURN_OP);
+                    newLSubrsIndex[FD] = buildNewIndex(fonts[Font].PrivateSubrsOffsetsArray[FD],hSubrsUsed[FD],RETURN_OP);
                 }
             }
         }
@@ -476,23 +473,23 @@ public class CFFFontSubset extends CFFFont {
         {
             // Build the subrs offsets;
             fonts[Font].SubrsOffsets = getIndex(fonts[Font].privateSubrs);
-            //Scans the Charstring data storing the used Local and Global subroutines 
+            //Scans the Charstring data storing the used Local and Global subroutines
             // by the glyphs. Scans the Subrs recursively.
-            BuildSubrUsed(Font,-1,fonts[Font].privateSubrs,fonts[Font].SubrsOffsets,hSubrsUsedNonCID,lSubrsUsedNonCID);
+            buildSubrUsed(Font,-1,fonts[Font].privateSubrs,fonts[Font].SubrsOffsets,hSubrsUsedNonCID,lSubrsUsedNonCID);
         }
         // For all fonts subset the Global Subroutines
         // Scan the Global Subr Hashmap recursively on the Gsubrs
         BuildGSubrsUsed(Font);
         if (fonts[Font].privateSubrs>=0)
             // Builds the New Local Subrs index
-            NewSubrsIndexNonCID = BuildNewIndex(fonts[Font].SubrsOffsets,hSubrsUsedNonCID,RETURN_OP);
+            newSubrsIndexNonCID = buildNewIndex(fonts[Font].SubrsOffsets, hSubrsUsedNonCID, RETURN_OP);
         //Builds the New Global Subrs index
-        NewGSubrsIndex = BuildNewIndex(gsubrOffsets,hGSubrsUsed,RETURN_OP);
+        newGSubrsIndex = buildNewIndex(gsubrOffsets, hGSubrsUsed, RETURN_OP);
     }
 
     /**
-     * The function finds for the FD array processed the local subr offset and its 
-     * offset array.  
+     * The function finds for the FD array processed the local subr offset and its
+     * offset array.
      * @param Font the font
      * @param FD The FDARRAY processed
      */
@@ -506,19 +503,19 @@ public class CFFFontSubset extends CFFFont {
         while (getPosition() < fonts[Font].fdprivateOffsets[FD]+fonts[Font].fdprivateLengths[FD])
         {
             getDictItem();
-            // If the dictItem is the "Subrs" then find and store offset, 
+            // If the dictItem is the "Subrs" then find and store offset,
             if (key=="Subrs")
                 fonts[Font].PrivateSubrsOffset[FD] = ((Integer)args[0]).intValue()+fonts[Font].fdprivateOffsets[FD];
         }
         //Read the lsubr index if the lsubr was found
         if (fonts[Font].PrivateSubrsOffset[FD] >= 0)
-            fonts[Font].PrivateSubrsOffsetsArray[FD] = getIndex(fonts[Font].PrivateSubrsOffset[FD]); 
+            fonts[Font].PrivateSubrsOffsetsArray[FD] = getIndex(fonts[Font].PrivateSubrsOffset[FD]);
     }
 
     /**
      * Function uses ReadAsubr on the glyph used to build the LSubr & Gsubr HashMap.
      * The HashMap (of the lsubr only) is then scanned recursively for Lsubr & Gsubrs
-     * calls.  
+     * calls.
      * @param Font the font
      * @param FD FD array processed. 0 indicates function was called by non CID font
      * @param SubrOffset the offset to the subr index to calc the bias
@@ -526,19 +523,19 @@ public class CFFFontSubset extends CFFFont {
      * @param hSubr HashMap of the subrs used
      * @param lSubr ArrayList of the subrs used
      */
-    protected void BuildSubrUsed(int Font,int FD,int SubrOffset,int[] SubrsOffsets,HashMap hSubr,ArrayList lSubr)
+    protected void buildSubrUsed(int Font, int FD, int SubrOffset, int[] SubrsOffsets, Map<Integer,?> hSubr, ArrayList<Integer> lSubr)
     {
 
         // Calc the Bias for the subr index
         int LBias = CalcBias(SubrOffset,Font);
-        
+
         // For each glyph used find its GID, start & end pos
         for (int i=0;i<glyphsInList.size();i++)
         {
-            int glyph = ((Integer)glyphsInList.get(i)).intValue();
+            int glyph = glyphsInList.get(i).intValue();
             int Start = fonts[Font].charstringsOffsets[glyph];
             int End = fonts[Font].charstringsOffsets[glyph+1];
-            
+
             // IF CID:
             if (FD >= 0)
             {
@@ -546,34 +543,34 @@ public class CFFFontSubset extends CFFFont {
                 NumOfHints=0;
                 // Using FDSELECT find the FD Array the glyph belongs to.
                 int GlyphFD = fonts[Font].FDSelect[glyph];
-                // If the Glyph is part of the FD being processed 
+                // If the Glyph is part of the FD being processed
                 if (GlyphFD == FD)
                     // Find the Subrs called by the glyph and insert to hash:
-                    ReadASubr(Start,End,GBias,LBias,hSubr,lSubr,SubrsOffsets);
+                    readASubr(Start,End,gBias,LBias,hSubr,lSubr,SubrsOffsets);
             }
             else
-                // If the font is not CID 
+                // If the font is not CID
                 //Find the Subrs called by the glyph and insert to hash:
-                ReadASubr(Start,End,GBias,LBias,hSubr,lSubr,SubrsOffsets);
+                readASubr(Start,End,gBias,LBias,hSubr,lSubr,SubrsOffsets);
         }
         // For all Lsubrs used, check recursively for Lsubr & Gsubr used
         for (int i=0;i<lSubr.size();i++)
         {
             // Pop the subr value from the hash
-            int Subr = ((Integer)lSubr.get(i)).intValue();
+            int Subr = lSubr.get(i).intValue();
             // Ensure the Lsubr call is valid
             if (Subr < SubrsOffsets.length-1 && Subr>=0)
             {
                 // Read and process the subr
                 int Start = SubrsOffsets[Subr];
                 int End = SubrsOffsets[Subr+1];
-                ReadASubr(Start,End,GBias,LBias,hSubr,lSubr,SubrsOffsets);
+                readASubr(Start,End,gBias,LBias,hSubr,lSubr,SubrsOffsets);
             }
         }
     }
-    
+
     /**
-     * Function scans the Glsubr used ArrayList to find recursive calls 
+     * Function scans the Glsubr used ArrayList to find recursive calls
      * to Gsubrs and adds to Hashmap & ArrayList
      * @param Font the font
      */
@@ -586,35 +583,35 @@ public class CFFFontSubset extends CFFFont {
             LBias = CalcBias(fonts[Font].privateSubrs,Font);
             SizeOfNonCIDSubrsUsed = lSubrsUsedNonCID.size();
         }
-        
-        // For each global subr used 
+
+        // For each global subr used
         for (int i=0;i<lGSubrsUsed.size();i++)
         {
-            //Pop the value + check valid 
-            int Subr = ((Integer)lGSubrsUsed.get(i)).intValue();
+            //Pop the value + check valid
+            int Subr = lGSubrsUsed.get(i).intValue();
             if (Subr < gsubrOffsets.length-1 && Subr>=0)
             {
                 // Read the subr and process
                 int Start = gsubrOffsets[Subr];
                 int End = gsubrOffsets[Subr+1];
-                
+
                 if (fonts[Font].isCID)
-                    ReadASubr(Start,End,GBias,0,hGSubrsUsed,lGSubrsUsed,null);
+                    readASubr(Start,End,gBias,0,hGSubrsUsed,lGSubrsUsed,null);
                 else
                 {
-                    ReadASubr(Start,End,GBias,LBias,hSubrsUsedNonCID,lSubrsUsedNonCID,fonts[Font].SubrsOffsets);
+                    readASubr(Start,End,gBias,LBias,hSubrsUsedNonCID,lSubrsUsedNonCID,fonts[Font].SubrsOffsets);
                     if (SizeOfNonCIDSubrsUsed < lSubrsUsedNonCID.size())
                     {
                         for (int j=SizeOfNonCIDSubrsUsed;j<lSubrsUsedNonCID.size();j++)
                         {
-                            //Pop the value + check valid 
-                            int LSubr = ((Integer)lSubrsUsedNonCID.get(j)).intValue();
+                            //Pop the value + check valid
+                            int LSubr = lSubrsUsedNonCID.get(j).intValue();
                             if (LSubr < fonts[Font].SubrsOffsets.length-1 && LSubr>=0)
                             {
                                 // Read the subr and process
                                 int LStart = fonts[Font].SubrsOffsets[LSubr];
                                 int LEnd = fonts[Font].SubrsOffsets[LSubr+1];
-                                ReadASubr(LStart,LEnd,GBias,LBias,hSubrsUsedNonCID,lSubrsUsedNonCID,fonts[Font].SubrsOffsets);
+                                readASubr(LStart,LEnd,gBias,LBias,hSubrsUsedNonCID,lSubrsUsedNonCID,fonts[Font].SubrsOffsets);
                             }
                         }
                         SizeOfNonCIDSubrsUsed = lSubrsUsedNonCID.size();
@@ -635,7 +632,7 @@ public class CFFFontSubset extends CFFFont {
      * @param hSubr the HashMap for the lSubrs
      * @param lSubr the ArrayList for the lSubrs
      */
-    protected void ReadASubr(int begin,int end,int GBias,int LBias,HashMap hSubr,ArrayList lSubr,int[] LSubrsOffsets)
+    protected void readASubr(int begin, int end, int GBias, int LBias, Map<Integer,?> hSubr, ArrayList<Integer> lSubr, int[] LSubrsOffsets)
     {
         // Clear the stack for the subrs
         EmptyStack();
@@ -647,43 +644,43 @@ public class CFFFontSubset extends CFFFont {
             // Read the next command
             ReadCommand();
             int pos = getPosition();
-            Object TopElement=null;
+            Object topElement = null;
             if (arg_count > 0)
-                TopElement = args[arg_count-1];
+                topElement = args[arg_count-1];
             int NumOfArgs = arg_count;
             // Check the modification needed on the Argument Stack according to key;
             HandelStack();
             // a call to a Lsubr
-            if (key=="callsubr") 
+            if (key=="callsubr")
             {
-                // Verify that arguments are passed 
+                // Verify that arguments are passed
                 if (NumOfArgs > 0)
                 {
                     // Calc the index of the Subrs
-                    int Subr = ((Integer)TopElement).intValue() + LBias;
+                    int Subr = ((Integer)topElement).intValue() + LBias;
                     // If the subr isn't in the HashMap -> Put in
-                    if (!hSubr.containsKey(new Integer (Subr)))
+                    if (!hSubr.containsKey(Integer.valueOf(Subr)))
                     {
-                        hSubr.put(new Integer(Subr),null);
-                        lSubr.add(new Integer(Subr));
+                        hSubr.put(Integer.valueOf(Subr),null);
+                        lSubr.add(Integer.valueOf(Subr));
                     }
                     CalcHints(LSubrsOffsets[Subr],LSubrsOffsets[Subr+1],LBias,GBias,LSubrsOffsets);
                     seek(pos);
-                }                
+                }
             }
             // a call to a Gsubr
             else if (key=="callgsubr")
             {
-                // Verify that arguments are passed 
+                // Verify that arguments are passed
                 if (NumOfArgs > 0)
                 {
                     // Calc the index of the Subrs
-                    int Subr = ((Integer)TopElement).intValue() + GBias;
+                    int Subr = ((Integer)topElement).intValue() + GBias;
                     // If the subr isn't in the HashMap -> Put in
-                    if (!hGSubrsUsed.containsKey(new Integer (Subr)))
+                    if (!hGSubrsUsed.containsKey(Integer.valueOf(Subr)))
                     {
-                        hGSubrsUsed.put(new Integer(Subr),null);
-                        lGSubrsUsed.add(new Integer(Subr));
+                        hGSubrsUsed.put(Integer.valueOf(Subr),null);
+                        lGSubrsUsed.add(Integer.valueOf(Subr));
                     }
                     CalcHints(gsubrOffsets[Subr],gsubrOffsets[Subr+1],LBias,GBias,LSubrsOffsets);
                     seek(pos);
@@ -708,7 +705,7 @@ public class CFFFontSubset extends CFFFont {
     }
 
     /**
-     * Function Checks how the current operator effects the run time stack after being run 
+     * Function Checks how the current operator effects the run time stack after being run
      * An operator may increase or decrease the stack size
      */
     protected void HandelStack()
@@ -728,13 +725,13 @@ public class CFFFontSubset extends CFFFont {
                 for (int i=0;i<StackHandel;i++)
                     PopStack();
             }
-            
+
         }
         // All other flush the stack
         else
-            EmptyStack();        
+            EmptyStack();
     }
-    
+
     /**
      * Function checks the key and return the change to the stack after the operator
      * @return The change in the stack. 2-> flush the stack
@@ -746,17 +743,17 @@ public class CFFFontSubset extends CFFFont {
         if (key == "roll" || key == "put")
             return -2;
         if (key == "callsubr" || key == "callgsubr" || key == "add" || key == "sub" ||
-            key == "div" || key == "mul" || key == "drop" || key == "and" || 
+            key == "div" || key == "mul" || key == "drop" || key == "and" ||
             key == "or" || key == "eq")
             return -1;
-        if (key == "abs" || key == "neg" || key == "sqrt" || key == "exch" || 
+        if (key == "abs" || key == "neg" || key == "sqrt" || key == "exch" ||
             key == "index" || key == "get" || key == "not" || key == "return")
             return 0;
         if (key == "random" || key == "dup")
             return 1;
         return 2;
     }
-    
+
     /**
      * Empty the Type2 Stack
      *
@@ -765,11 +762,11 @@ public class CFFFontSubset extends CFFFont {
     {
         // Null the arguments
         for (int i=0; i<arg_count; i++) args[i]=null;
-        arg_count = 0;        
+        arg_count = 0;
     }
-    
+
     /**
-     * Pop one element from the stack 
+     * Pop one element from the stack
      *
      */
     protected void PopStack()
@@ -780,7 +777,7 @@ public class CFFFontSubset extends CFFFont {
             arg_count--;
         }
     }
-    
+
     /**
      * Add an item to the stack
      *
@@ -789,7 +786,7 @@ public class CFFFontSubset extends CFFFont {
     {
         arg_count++;
     }
-    
+
     /**
      * The function reads the next command after the file pointer is set
      */
@@ -806,27 +803,27 @@ public class CFFFontSubset extends CFFFont {
             {
                 int first = getCard8();
                 int second = getCard8();
-                args[arg_count] = new Integer(first<<8 | second);
+                args[arg_count] = Integer.valueOf(first<<8 | second);
                 arg_count++;
                 continue;
             }
             if (b0 >= 32 && b0 <= 246) // The byte read is the byte;
             {
-                args[arg_count] = new Integer(b0 - 139);
+                args[arg_count] = Integer.valueOf(b0 - 139);
                 arg_count++;
                 continue;
             }
             if (b0 >= 247 && b0 <= 250) // The byte read and the next byte constitute a short int
             {
                 int w = getCard8();
-                args[arg_count] = new Integer((b0-247)*256 + w + 108);
+                args[arg_count] = Integer.valueOf((b0-247)*256 + w + 108);
                 arg_count++;
                 continue;
             }
             if (b0 >= 251 && b0 <= 254)// Same as above except negative
             {
                 int w = getCard8();
-                args[arg_count] = new Integer(-(b0-251)*256 - w - 108);
+                args[arg_count] = Integer.valueOf(-(b0-251)*256 - w - 108);
                 arg_count++;
                 continue;
             }
@@ -836,7 +833,7 @@ public class CFFFontSubset extends CFFFont {
                 int second = getCard8();
                 int third = getCard8();
                 int fourth = getCard8();
-                args[arg_count] = new Integer(first<<24 | second<<16 | third<<8 | fourth);
+                args[arg_count] = Integer.valueOf(first<<24 | second<<16 | third<<8 | fourth);
                 arg_count++;
                 continue;
             }
@@ -856,9 +853,9 @@ public class CFFFontSubset extends CFFFont {
                     key = SubrsFunctions[b0];
                 continue;
             }
-        }        
+        }
     }
-    
+
     /**
      * The function reads the subroutine and returns the number of the hint in it.
      * If a call to another subroutine is found the function calls recursively.
@@ -885,13 +882,13 @@ public class CFFFontSubset extends CFFFont {
             //Check the modification needed on the Argument Stack according to key;
             HandelStack();
             // a call to a Lsubr
-            if (key=="callsubr") 
+            if (key=="callsubr")
             {
                 if (NumOfArgs>0)
                 {
                     int Subr = ((Integer)TopElement).intValue() + LBias;
                     CalcHints(LSubrsOffsets[Subr],LSubrsOffsets[Subr+1],LBias,GBias,LSubrsOffsets);
-                    seek(pos);                    
+                    seek(pos);
                 }
             }
             // a call to a Gsubr
@@ -901,7 +898,7 @@ public class CFFFontSubset extends CFFFont {
                 {
                     int Subr = ((Integer)TopElement).intValue() + GBias;
                     CalcHints(gsubrOffsets[Subr],gsubrOffsets[Subr+1],LBias,GBias,LSubrsOffsets);
-                    seek(pos);                    
+                    seek(pos);
                 }
             }
             // A call to "stem"
@@ -926,26 +923,25 @@ public class CFFFontSubset extends CFFFont {
 
     /**
      * Function builds the new offset array, object array and assembles the index.
-     * used for creating the glyph and subrs subsetted index 
-     * @param Offsets the offset array of the original index  
-     * @param Used the hashmap of the used objects
-     * @param OperatorForUnusedEntries the operator inserted into the data stream for unused entries
-     * @return the new index subset version 
+     * used for creating the glyph and subrs subsetted index
+     * @param offsets the offset array of the original index
+     * @param used the hashmap of the used objects
+     * @param operatorForUnusedEntries the operator inserted into the data stream for unused entries
+     * @return the new index subset version
      * @throws IOException
      */
-    protected byte[] BuildNewIndex(int[] Offsets,HashMap Used,byte OperatorForUnusedEntries) throws IOException 
-    {
+    protected byte[] buildNewIndex(int[] offsets, Map<Integer,?> used, byte operatorForUnusedEntries) throws IOException {
         int unusedCount = 0;
         int Offset=0;
-        int[] NewOffsets = new int[Offsets.length];
+        int[] NewOffsets = new int[offsets.length];
         // Build the Offsets Array for the Subset
-        for (int i=0;i<Offsets.length;++i)
+        for (int i=0;i<offsets.length;++i)
         {
             NewOffsets[i] = Offset;
             // If the object in the offset is also present in the used
             // HashMap then increment the offset var by its size
-            if (Used.containsKey(new Integer(i))) {
-                Offset += Offsets[i+1] - Offsets[i];
+            if (used.containsKey(Integer.valueOf(i))) {
+                Offset += offsets[i+1] - offsets[i];
             } else {
                 // Else the same offset is kept in i+1.
                 unusedCount++;
@@ -955,7 +951,7 @@ public class CFFFontSubset extends CFFFont {
         byte[] NewObjects = new byte[Offset+unusedCount];
         // Build the new Object array
         int unusedOffset = 0;
-        for (int i=0;i<Offsets.length-1;++i)
+        for (int i=0;i<offsets.length-1;++i)
         {
             int start = NewOffsets[i];
             int end = NewOffsets[i+1];
@@ -966,15 +962,15 @@ public class CFFFontSubset extends CFFFont {
             {
                 // All offsets are Global Offsets relative to the beginning of the font file.
                 // Jump the file pointer to the start address to read from.
-                buf.seek(Offsets[i]);
-                // Read from the buffer and write into the array at start.  
+                buf.seek(offsets[i]);
+                // Read from the buffer and write into the array at start.
                 buf.readFully(NewObjects, start+unusedOffset, end-start);
             } else {
-                NewObjects[start+unusedOffset] = OperatorForUnusedEntries;
+                NewObjects[start+unusedOffset] = operatorForUnusedEntries;
                 unusedOffset++;
             }
         }
-        NewOffsets[Offsets.length-1] += unusedOffset;
+        NewOffsets[offsets.length-1] += unusedOffset;
         // Use AssembleIndex to build the index from the offset & object arrays
         return AssembleIndex(NewOffsets,NewObjects);
     }
@@ -993,37 +989,40 @@ public class CFFFontSubset extends CFFFont {
         // Calc the size of the object array
         int Size = NewOffsets[NewOffsets.length-1];
         // Calc the Offsize
-        byte Offsize;
-        if (Size <= 0xff) Offsize = 1;
-        else if (Size <= 0xffff) Offsize = 2;
-        else if (Size <= 0xffffff) Offsize = 3;
-        else Offsize = 4;
+        byte offsize;
+        if (Size <= 0xff) offsize = 1;
+        else if (Size <= 0xffff) offsize = 2;
+        else if (Size <= 0xffffff) offsize = 3;
+        else offsize = 4;
         // The byte array for the new index. The size is calc by
         // Count=2, Offsize=1, OffsetArray = Offsize*(Count+1), The object array
-        byte[] NewIndex = new byte[2+1+Offsize*(Count+1)+NewObjects.length];
+        byte[] NewIndex = new byte[2+1+offsize*(Count+1)+NewObjects.length];
         // The counter for writing
         int Place = 0;
         // Write the count field
         NewIndex[Place++] = (byte) ((Count >>> 8) & 0xff);
         NewIndex[Place++] = (byte) ((Count >>> 0) & 0xff);
         // Write the offsize field
-        NewIndex[Place++] = Offsize;
+        NewIndex[Place++] = offsize;
         // Write the offset array according to the offsize
         for (int i=0;i<NewOffsets.length;i++)
         {
             // The value to be written
             int Num = NewOffsets[i]-NewOffsets[0]+1;
             // Write in bytes according to the offsize
-            switch (Offsize) {
+            switch (offsize) {
                 case 4:
                     NewIndex[Place++] = (byte) ((Num >>> 24) & 0xff);
+                    //$FALL-THROUGH$
                 case 3:
                     NewIndex[Place++] = (byte) ((Num >>> 16) & 0xff);
+                    //$FALL-THROUGH$
                 case 2:
                     NewIndex[Place++] = (byte) ((Num >>>  8) & 0xff);
+                    //$FALL-THROUGH$
                 case 1:
                     NewIndex[Place++] = (byte) ((Num >>>  0) & 0xff);
-            }                    
+            }
         }
         // Write the new object array one by one
         for (int i=0;i<NewObjects.length;i++)
@@ -1033,7 +1032,7 @@ public class CFFFontSubset extends CFFFont {
         // Return the new index
         return NewIndex;
     }
-    
+
     /**
      * The function builds the new output stream according to the subset process
      * @param Font the font
@@ -1042,42 +1041,42 @@ public class CFFFontSubset extends CFFFont {
     protected byte[] BuildNewFile(int Font)
     {
         // Prepare linked list for new font components
-        OutputList = new LinkedList();
+        outputList = new LinkedList<>();
 
         // copy the header of the font
         CopyHeader();
-                
+
         // create a name index
         BuildIndexHeader(1,1,1);
-        OutputList.addLast(new UInt8Item((char)( 1+fonts[Font].name.length() )));
-        OutputList.addLast(new StringItem(fonts[Font].name));
-        
+        outputList.addLast(new UInt8Item((char)( 1+fonts[Font].name.length() )));
+        outputList.addLast(new StringItem(fonts[Font].name));
+
         // create the topdict Index
         BuildIndexHeader(1,2,1);
         OffsetItem topdictIndex1Ref = new IndexOffsetItem(2);
-        OutputList.addLast(topdictIndex1Ref);
+        outputList.addLast(topdictIndex1Ref);
         IndexBaseItem topdictBase = new IndexBaseItem();
-        OutputList.addLast(topdictBase);
-                
+        outputList.addLast(topdictBase);
+
         // Initialize the Dict Items for later use
         OffsetItem charsetRef     = new DictOffsetItem();
         OffsetItem charstringsRef = new DictOffsetItem();
         OffsetItem fdarrayRef     = new DictOffsetItem();
         OffsetItem fdselectRef    = new DictOffsetItem();
         OffsetItem privateRef     = new DictOffsetItem();
-        
+
         // If the font is not CID create the following keys
         if ( !fonts[Font].isCID ) {
             // create a ROS key
-            OutputList.addLast(new DictNumberItem(fonts[Font].nstrings));
-            OutputList.addLast(new DictNumberItem(fonts[Font].nstrings+1));
-            OutputList.addLast(new DictNumberItem(0));
-            OutputList.addLast(new UInt8Item((char)12));
-            OutputList.addLast(new UInt8Item((char)30));
+            outputList.addLast(new DictNumberItem(fonts[Font].nstrings));
+            outputList.addLast(new DictNumberItem(fonts[Font].nstrings+1));
+            outputList.addLast(new DictNumberItem(0));
+            outputList.addLast(new UInt8Item((char)12));
+            outputList.addLast(new UInt8Item((char)30));
             // create a CIDCount key
-            OutputList.addLast(new DictNumberItem(fonts[Font].nglyphs));
-            OutputList.addLast(new UInt8Item((char)12));
-            OutputList.addLast(new UInt8Item((char)34));
+            outputList.addLast(new DictNumberItem(fonts[Font].nglyphs));
+            outputList.addLast(new UInt8Item((char)12));
+            outputList.addLast(new UInt8Item((char)34));
             // Sivan's comments
             // What about UIDBase (12,35)? Don't know what is it.
             // I don't think we need FontName; the font I looked at didn't have it.
@@ -1092,88 +1091,88 @@ public class CFFFontSubset extends CFFFont {
             // The encoding key is disregarded since CID has no encoding
             if (key=="Encoding"
             // These keys will be added manually by the process.
-            || key=="Private" 
+            || key=="Private"
             || key=="FDSelect"
-            || key=="FDArray" 
-            || key=="charset" 
+            || key=="FDArray"
+            || key=="charset"
             || key=="CharStrings"
             ) {
             }else {
             //OtherWise copy key "as is" to the output list
-                OutputList.add(new RangeItem(buf,p1,p2-p1));
+                outputList.add(new RangeItem(buf,p1,p2-p1));
             }
         }
         // Create the FDArray, FDSelect, Charset and CharStrings Keys
         CreateKeys(fdarrayRef,fdselectRef,charsetRef,charstringsRef);
-        
+
         // Mark the end of the top dict area
-        OutputList.addLast(new IndexMarkerItem(topdictIndex1Ref,topdictBase));
-        
+        outputList.addLast(new IndexMarkerItem(topdictIndex1Ref,topdictBase));
+
         // Copy the string index
 
-        if (fonts[Font].isCID) 
-            OutputList.addLast(getEntireIndexRange(stringIndexOffset));
+        if (fonts[Font].isCID)
+            outputList.addLast(getEntireIndexRange(stringIndexOffset));
         // If the font is not CID we need to append new strings.
         // We need 3 more strings: Registry, Ordering, and a FontName for one FD.
         // The total length is at most "Adobe"+"Identity"+63 = 76
         else
             CreateNewStringIndex(Font);
-        
-        // copy the new subsetted global subroutine index       
-        OutputList.addLast(new RangeItem(new RandomAccessFileOrArray(NewGSubrsIndex),0,NewGSubrsIndex.length));
-        
+
+        // copy the new subsetted global subroutine index
+        outputList.addLast(new RangeItem(new RandomAccessFileOrArray(newGSubrsIndex),0,newGSubrsIndex.length));
+
         // deal with fdarray, fdselect, and the font descriptors
         // If the font is CID:
         if (fonts[Font].isCID) {
             // copy the FDArray, FDSelect, charset
-       
+
             // Copy FDSelect
             // Mark the beginning
-            OutputList.addLast(new MarkerItem(fdselectRef));
+            outputList.addLast(new MarkerItem(fdselectRef));
             // If an FDSelect exists copy it
             if (fonts[Font].fdselectOffset>=0)
-                OutputList.addLast(new RangeItem(buf,fonts[Font].fdselectOffset,fonts[Font].FDSelectLength));
+                outputList.addLast(new RangeItem(buf,fonts[Font].fdselectOffset,fonts[Font].FDSelectLength));
             // Else create a new one
             else
                 CreateFDSelect(fdselectRef,fonts[Font].nglyphs);
-                           
+
               // Copy the Charset
-            // Mark the beginning and copy entirely 
-            OutputList.addLast(new MarkerItem(charsetRef));
-            OutputList.addLast(new RangeItem(buf,fonts[Font].charsetOffset,fonts[Font].CharsetLength));
-            
+            // Mark the beginning and copy entirely
+            outputList.addLast(new MarkerItem(charsetRef));
+            outputList.addLast(new RangeItem(buf,fonts[Font].charsetOffset,fonts[Font].CharsetLength));
+
             // Copy the FDArray
             // If an FDArray exists
             if (fonts[Font].fdarrayOffset>=0)
             {
                 // Mark the beginning
-                OutputList.addLast(new MarkerItem(fdarrayRef));
+                outputList.addLast(new MarkerItem(fdarrayRef));
                 // Build a new FDArray with its private dicts and their LSubrs
                 Reconstruct(Font);
             }
             else
                 // Else create a new one
                 CreateFDArray(fdarrayRef,privateRef,Font);
-           
+
         }
         // If the font is not CID
-        else 
+        else
         {
             // create FDSelect
-            CreateFDSelect(fdselectRef,fonts[Font].nglyphs);            
+            CreateFDSelect(fdselectRef,fonts[Font].nglyphs);
             // recreate a new charset
-            CreateCharset(charsetRef,fonts[Font].nglyphs);            
+            CreateCharset(charsetRef,fonts[Font].nglyphs);
             // create a font dict index (fdarray)
-            CreateFDArray(fdarrayRef,privateRef,Font);            
+            CreateFDArray(fdarrayRef,privateRef,Font);
         }
-        
+
         // if a private dict exists insert its subsetted version
         if (fonts[Font].privateOffset>=0)
         {
             // Mark the beginning of the private dict
             IndexBaseItem PrivateBase = new IndexBaseItem();
-            OutputList.addLast(PrivateBase);
-            OutputList.addLast(new MarkerItem(privateRef));
+            outputList.addLast(PrivateBase);
+            outputList.addLast(new MarkerItem(privateRef));
 
             OffsetItem Subr = new DictOffsetItem();
             // Build and copy the new private dict
@@ -1181,36 +1180,30 @@ public class CFFFontSubset extends CFFFont {
             // Copy the new LSubrs index
             CreateNonCIDSubrs(Font,PrivateBase,Subr);
         }
-        
+
         // copy the charstring index
-        OutputList.addLast(new MarkerItem(charstringsRef));
+        outputList.addLast(new MarkerItem(charstringsRef));
 
         // Add the subsetted charstring
-        OutputList.addLast(new RangeItem(new RandomAccessFileOrArray(NewCharStringsIndex),0,NewCharStringsIndex.length));
-        
-        // now create the new CFF font        
+        outputList.addLast(new RangeItem(new RandomAccessFileOrArray(newCharStringsIndex),0,newCharStringsIndex.length));
+
+        // now create the new CFF font
         int[] currentOffset = new int[1];
         currentOffset[0] = 0;
         // Count and save the offset for each item
-        Iterator listIter = OutputList.iterator();
-        while ( listIter.hasNext() ) {
-            Item item = (Item) listIter.next();
+        for (Item item : outputList) {
             item.increment(currentOffset);
         }
         // Compute the Xref for each of the offset items
-        listIter = OutputList.iterator();
-        while ( listIter.hasNext() ) {
-            Item item = (Item) listIter.next();
+        for (Item item : outputList) {
             item.xref();
         }
-        
+
         int size = currentOffset[0];
         byte[] b = new byte[size];
-        
+
         // Emit all the items into the new byte array
-        listIter = OutputList.iterator();
-        while ( listIter.hasNext() ) {
-            Item item = (Item) listIter.next();
+        for (Item item : outputList) {
             item.emit(b);
         }
         // Return the new stream
@@ -1228,40 +1221,38 @@ public class CFFFontSubset extends CFFFont {
         int hdrSize = getCard8();
         int offSize = getCard8();
         nextIndexOffset = hdrSize;
-        OutputList.addLast(new RangeItem(buf,0,hdrSize));
+        outputList.addLast(new RangeItem(buf,0,hdrSize));
     }
 
     /**
      * Function Build the header of an index
-     * @param Count the count field of the index
-     * @param Offsize the offsize field of the index
-     * @param First the first offset of the index
+     * @param count the count field of the index
+     * @param offsize the offsize field of the index
+     * @param first the first offset of the index
      */
-    protected void BuildIndexHeader(int Count,int Offsize,int First)
+    protected void BuildIndexHeader(int count, int offsize, int first)
     {
         // Add the count field
-        OutputList.addLast(new UInt16Item((char)Count)); // count
+        outputList.addLast(new UInt16Item((char)count)); // count
         // Add the offsize field
-        OutputList.addLast(new UInt8Item((char)Offsize)); // offSize
+        outputList.addLast(new UInt8Item((char)offsize)); // offSize
         // Add the first offset according to the offsize
-        switch(Offsize){
+        switch(offsize){
             case 1:
-                OutputList.addLast(new UInt8Item((char)First)); // first offset
+                outputList.addLast(new UInt8Item((char)first)); // first offset
                 break;
             case 2:
-                OutputList.addLast(new UInt16Item((char)First)); // first offset
+                outputList.addLast(new UInt16Item((char)first)); // first offset
                 break;
             case 3:
-                OutputList.addLast(new UInt24Item((char)First)); // first offset
+                outputList.addLast(new UInt24Item((char)first)); // first offset
                 break;
             case 4:
-                OutputList.addLast(new UInt32Item((char)First)); // first offset
+                outputList.addLast(new UInt32Item((char)first)); // first offset
                 break;
-            default:
-                break;    
         }
     }
-    
+
     /**
      * Function adds the keys into the TopDict
      * @param fdarrayRef OffsetItem for the FDArray
@@ -1272,21 +1263,21 @@ public class CFFFontSubset extends CFFFont {
     protected void CreateKeys(OffsetItem fdarrayRef,OffsetItem fdselectRef,OffsetItem charsetRef,OffsetItem charstringsRef)
     {
         // create an FDArray key
-        OutputList.addLast(fdarrayRef);
-        OutputList.addLast(new UInt8Item((char)12));
-        OutputList.addLast(new UInt8Item((char)36));
+        outputList.addLast(fdarrayRef);
+        outputList.addLast(new UInt8Item((char)12));
+        outputList.addLast(new UInt8Item((char)36));
         // create an FDSelect key
-        OutputList.addLast(fdselectRef);
-        OutputList.addLast(new UInt8Item((char)12));
-        OutputList.addLast(new UInt8Item((char)37));
+        outputList.addLast(fdselectRef);
+        outputList.addLast(new UInt8Item((char)12));
+        outputList.addLast(new UInt8Item((char)37));
         // create an charset key
-        OutputList.addLast(charsetRef);
-        OutputList.addLast(new UInt8Item((char)15));
+        outputList.addLast(charsetRef);
+        outputList.addLast(new UInt8Item((char)15));
         // create a CharStrings key
-        OutputList.addLast(charstringsRef);
-        OutputList.addLast(new UInt8Item((char)17));
+        outputList.addLast(charstringsRef);
+        outputList.addLast(new UInt8Item((char)17));
     }
-    
+
     /**
      * Function takes the original string item and adds the new strings
      * to accommodate the CID rules
@@ -1298,36 +1289,36 @@ public class CFFFontSubset extends CFFFont {
         if (fdFontName.length() > 127)
             fdFontName = fdFontName.substring(0,127);
         String extraStrings = "Adobe"+"Identity"+fdFontName;
-        
+
         int origStringsLen = stringOffsets[stringOffsets.length-1]
         - stringOffsets[0];
         int stringsBaseOffset = stringOffsets[0]-1;
-        
+
         byte stringsIndexOffSize;
         if (origStringsLen+extraStrings.length() <= 0xff) stringsIndexOffSize = 1;
         else if (origStringsLen+extraStrings.length() <= 0xffff) stringsIndexOffSize = 2;
         else if (origStringsLen+extraStrings.length() <= 0xffffff) stringsIndexOffSize = 3;
         else stringsIndexOffSize = 4;
-        
-        OutputList.addLast(new UInt16Item((char)((stringOffsets.length-1)+3))); // count
-        OutputList.addLast(new UInt8Item((char)stringsIndexOffSize)); // offSize
+
+        outputList.addLast(new UInt16Item((char)((stringOffsets.length-1)+3))); // count
+        outputList.addLast(new UInt8Item((char)stringsIndexOffSize)); // offSize
         for (int i=0; i<stringOffsets.length; i++)
-            OutputList.addLast(new IndexOffsetItem(stringsIndexOffSize,
+            outputList.addLast(new IndexOffsetItem(stringsIndexOffSize,
             stringOffsets[i]-stringsBaseOffset));
         int currentStringsOffset = stringOffsets[stringOffsets.length-1]
         - stringsBaseOffset;
         //l.addLast(new IndexOffsetItem(stringsIndexOffSize,currentStringsOffset));
         currentStringsOffset += "Adobe".length();
-        OutputList.addLast(new IndexOffsetItem(stringsIndexOffSize,currentStringsOffset));
+        outputList.addLast(new IndexOffsetItem(stringsIndexOffSize,currentStringsOffset));
         currentStringsOffset += "Identity".length();
-        OutputList.addLast(new IndexOffsetItem(stringsIndexOffSize,currentStringsOffset));
+        outputList.addLast(new IndexOffsetItem(stringsIndexOffSize,currentStringsOffset));
         currentStringsOffset += fdFontName.length();
-        OutputList.addLast(new IndexOffsetItem(stringsIndexOffSize,currentStringsOffset));
-        
-        OutputList.addLast(new RangeItem(buf,stringOffsets[0],origStringsLen));
-        OutputList.addLast(new StringItem(extraStrings));
+        outputList.addLast(new IndexOffsetItem(stringsIndexOffSize,currentStringsOffset));
+
+        outputList.addLast(new RangeItem(buf,stringOffsets[0],origStringsLen));
+        outputList.addLast(new StringItem(extraStrings));
     }
-     
+
     /**
      * Function creates new FDSelect for non-CID fonts.
      * The FDSelect built uses a single range for all glyphs
@@ -1336,14 +1327,14 @@ public class CFFFontSubset extends CFFFont {
      */
     protected void CreateFDSelect(OffsetItem fdselectRef,int nglyphs)
     {
-        OutputList.addLast(new MarkerItem(fdselectRef));
-        OutputList.addLast(new UInt8Item((char)3)); // format identifier
-        OutputList.addLast(new UInt16Item((char)1)); // nRanges
-        
-        OutputList.addLast(new UInt16Item((char)0)); // Range[0].firstGlyph
-        OutputList.addLast(new UInt8Item((char)0)); // Range[0].fd
-        
-        OutputList.addLast(new UInt16Item((char)nglyphs)); // sentinel
+        outputList.addLast(new MarkerItem(fdselectRef));
+        outputList.addLast(new UInt8Item((char)3)); // format identifier
+        outputList.addLast(new UInt16Item((char)1)); // nRanges
+
+        outputList.addLast(new UInt16Item((char)0)); // Range[0].firstGlyph
+        outputList.addLast(new UInt8Item((char)0)); // Range[0].fd
+
+        outputList.addLast(new UInt16Item((char)nglyphs)); // sentinel
     }
 
     /**
@@ -1354,32 +1345,32 @@ public class CFFFontSubset extends CFFFont {
      */
     protected void CreateCharset(OffsetItem charsetRef,int nglyphs)
     {
-        OutputList.addLast(new MarkerItem(charsetRef));
-        OutputList.addLast(new UInt8Item((char)2)); // format identifier
-        OutputList.addLast(new UInt16Item((char)1)); // first glyph in range (ignore .notdef)
-        OutputList.addLast(new UInt16Item((char)(nglyphs-1))); // nLeft
+        outputList.addLast(new MarkerItem(charsetRef));
+        outputList.addLast(new UInt8Item((char)2)); // format identifier
+        outputList.addLast(new UInt16Item((char)1)); // first glyph in range (ignore .notdef)
+        outputList.addLast(new UInt16Item((char)(nglyphs-1))); // nLeft
     }
-    
+
     /**
      * Function creates new FDArray for non-CID fonts.
      * The FDArray built has only the "Private" operator that points to the font's
-     * original private dict 
+     * original private dict
      * @param fdarrayRef OffsetItem for the FDArray
      * @param privateRef OffsetItem for the Private Dict
      * @param Font the font
      */
     protected void CreateFDArray(OffsetItem fdarrayRef,OffsetItem privateRef,int Font)
     {
-        OutputList.addLast(new MarkerItem(fdarrayRef));
+        outputList.addLast(new MarkerItem(fdarrayRef));
         // Build the header (count=offsize=first=1)
         BuildIndexHeader(1,1,1);
-        
+
         // Mark
         OffsetItem privateIndex1Ref = new IndexOffsetItem(1);
-        OutputList.addLast(privateIndex1Ref);
+        outputList.addLast(privateIndex1Ref);
         IndexBaseItem privateBase = new IndexBaseItem();
         // Insert the private operands and operator
-        OutputList.addLast(privateBase);
+        outputList.addLast(privateBase);
         // Calc the new size of the private after subsetting
         // Origianl size
         int NewSize = fonts[Font].privateLength;
@@ -1388,13 +1379,13 @@ public class CFFFontSubset extends CFFFont {
         // Increase the ptivate's size
         if (OrgSubrsOffsetSize != 0)
             NewSize += 5-OrgSubrsOffsetSize;
-        OutputList.addLast(new DictNumberItem(NewSize));
-        OutputList.addLast(privateRef);
-        OutputList.addLast(new UInt8Item((char)18)); // Private
-        
-        OutputList.addLast(new IndexMarkerItem(privateIndex1Ref,privateBase));
+        outputList.addLast(new DictNumberItem(NewSize));
+        outputList.addLast(privateRef);
+        outputList.addLast(new UInt8Item((char)18)); // Private
+
+        outputList.addLast(new IndexMarkerItem(privateIndex1Ref,privateBase));
     }
-    
+
     /**
      * Function reconstructs the FDArray, PrivateDict and LSubr for CID fonts
      * @param Font the font
@@ -1403,7 +1394,7 @@ public class CFFFontSubset extends CFFFont {
     {
         // Init for later use
         OffsetItem[] fdPrivate = new DictOffsetItem[fonts[Font].FDArrayOffsets.length-1];
-        IndexBaseItem[] fdPrivateBase = new IndexBaseItem[fonts[Font].fdprivateOffsets.length]; 
+        IndexBaseItem[] fdPrivateBase = new IndexBaseItem[fonts[Font].fdprivateOffsets.length];
         OffsetItem[] fdSubrs = new DictOffsetItem[fonts[Font].fdprivateOffsets.length];
         // Reconstruct each type
         ReconstructFDArray(Font,fdPrivate);
@@ -1426,19 +1417,19 @@ public class CFFFontSubset extends CFFFont {
         for (int i=0;i<fonts[Font].FDArrayOffsets.length-1;i++)
         {
             fdOffsets[i] = new IndexOffsetItem(fonts[Font].FDArrayOffsize);
-            OutputList.addLast(fdOffsets[i]);
+            outputList.addLast(fdOffsets[i]);
         }
-        
+
         // Declare beginning of the object array
         IndexBaseItem fdArrayBase = new IndexBaseItem();
-        OutputList.addLast(fdArrayBase);
-        
+        outputList.addLast(fdArrayBase);
+
         // For each object check if that FD is used.
         // if is used build a new one by changing the private object
         // Else do nothing
         // At the end of each object mark its ending (Even if wasn't written)
         for (int k=0; k<fonts[Font].FDArrayOffsets.length-1; k++) {
-            if (FDArrayUsed.containsKey(new Integer (k)))
+            if (fdArrayUsed.containsKey(Integer.valueOf(k)))
             {
                 // Goto beginning of objects
                 seek(fonts[Font].FDArrayOffsets[k]);
@@ -1447,7 +1438,7 @@ public class CFFFontSubset extends CFFFont {
                     int p1 = getPosition();
                     getDictItem();
                     int p2 = getPosition();
-                    // If the dictItem is the "Private" then compute and copy length, 
+                    // If the dictItem is the "Private" then compute and copy length,
                     // use marker for offset and write operator number
                     if (key=="Private") {
                         // Save the original length of the private dict
@@ -1458,20 +1449,20 @@ public class CFFFontSubset extends CFFFont {
                         if (OrgSubrsOffsetSize != 0)
                             NewSize += 5-OrgSubrsOffsetSize;
                         // Insert the new size, OffsetItem and operator key number
-                        OutputList.addLast(new DictNumberItem(NewSize));
+                        outputList.addLast(new DictNumberItem(NewSize));
                         fdPrivate[k] = new DictOffsetItem();
-                        OutputList.addLast(fdPrivate[k]);
-                        OutputList.addLast(new UInt8Item((char)18)); // Private
-                        // Go back to place 
+                        outputList.addLast(fdPrivate[k]);
+                        outputList.addLast(new UInt8Item((char)18)); // Private
+                        // Go back to place
                         seek(p2);
                     }
                     // Else copy the entire range
                     else  // other than private
-                        OutputList.addLast(new RangeItem(buf,p1,p2-p1));
+                        outputList.addLast(new RangeItem(buf,p1,p2-p1));
                 }
             }
             // Mark the ending of the object (even if wasn't written)
-            OutputList.addLast(new IndexMarkerItem(fdOffsets[k],fdArrayBase));
+            outputList.addLast(new IndexMarkerItem(fdOffsets[k],fdArrayBase));
         }
     }
     /**
@@ -1484,18 +1475,18 @@ public class CFFFontSubset extends CFFFont {
     void ReconstructPrivateDict(int Font,OffsetItem[] fdPrivate,IndexBaseItem[] fdPrivateBase,
             OffsetItem[] fdSubrs)
     {
-        
+
         // For each fdarray private dict check if that FD is used.
         // if is used build a new one by changing the subrs offset
         // Else do nothing
         for (int i=0;i<fonts[Font].fdprivateOffsets.length;i++)
         {
-            if (FDArrayUsed.containsKey(new Integer (i)))
+            if (fdArrayUsed.containsKey(Integer.valueOf(i)))
             {
                 // Mark beginning
-                OutputList.addLast(new MarkerItem(fdPrivate[i]));
+                outputList.addLast(new MarkerItem(fdPrivate[i]));
                 fdPrivateBase[i] = new IndexBaseItem();
-                OutputList.addLast(fdPrivateBase[i]);
+                outputList.addLast(fdPrivateBase[i]);
                 // Goto beginning of objects
                 seek(fonts[Font].fdprivateOffsets[i]);
                 while (getPosition() < fonts[Font].fdprivateOffsets[i]+fonts[Font].fdprivateLengths[i])
@@ -1503,28 +1494,28 @@ public class CFFFontSubset extends CFFFont {
                     int p1 = getPosition();
                     getDictItem();
                     int p2 = getPosition();
-                    // If the dictItem is the "Subrs" then, 
+                    // If the dictItem is the "Subrs" then,
                     // use marker for offset and write operator number
                     if (key=="Subrs") {
                         fdSubrs[i] = new DictOffsetItem();
-                        OutputList.addLast(fdSubrs[i]);
-                        OutputList.addLast(new UInt8Item((char)19)); // Subrs
+                        outputList.addLast(fdSubrs[i]);
+                        outputList.addLast(new UInt8Item((char)19)); // Subrs
                     }
                     // Else copy the entire range
                     else
-                        OutputList.addLast(new RangeItem(buf,p1,p2-p1));
+                        outputList.addLast(new RangeItem(buf,p1,p2-p1));
                 }
             }
         }
     }
-    
+
     /**
      * Function Adds the new LSubrs dicts (only for the FDs used) to the list
      * @param Font  The index of the font
      * @param fdPrivateBase The IndexBaseItem array for the linked list
      * @param fdSubrs OffsetItem array for the linked list
      */
-    
+
     void ReconstructPrivateSubrs(int Font,IndexBaseItem[] fdPrivateBase,
             OffsetItem[] fdSubrs)
     {
@@ -1534,9 +1525,9 @@ public class CFFFontSubset extends CFFFont {
             // If that private dict's Subrs are used insert the new LSubrs
             // computed earlier
             if (fdSubrs[i]!= null && fonts[Font].PrivateSubrsOffset[i] >= 0)
-            {                
-                OutputList.addLast(new SubrMarkerItem(fdSubrs[i],fdPrivateBase[i]));
-                OutputList.addLast(new RangeItem(new RandomAccessFileOrArray(NewLSubrsIndex[i]),0,NewLSubrsIndex[i].length));
+            {
+                outputList.addLast(new SubrMarkerItem(fdSubrs[i],fdPrivateBase[i]));
+                outputList.addLast(new RangeItem(new RandomAccessFileOrArray(newLSubrsIndex[i]),0,newLSubrsIndex[i].length));
             }
         }
     }
@@ -1554,7 +1545,7 @@ public class CFFFontSubset extends CFFFont {
         int OffsetSize = 0;
         // Go to the beginning of the private dict
         seek(Offset);
-        // Go until the end of the private dict 
+        // Go until the end of the private dict
         while (getPosition() < Offset+Size)
         {
             int p1 = getPosition();
@@ -1570,22 +1561,22 @@ public class CFFFontSubset extends CFFFont {
         // return the size
         return OffsetSize;
     }
-    
+
     /**
      * Function computes the size of an index
      * @param indexOffset The offset for the computed index
      * @return The size of the index
      */
-    protected int countEntireIndexRange(int indexOffset) 
+    protected int countEntireIndexRange(int indexOffset)
     {
-        // Go to the beginning of the index 
+        // Go to the beginning of the index
         seek(indexOffset);
         // Read the count field
         int count = getCard16();
         // If count==0 -> size=2
-        if (count==0) 
+        if (count==0)
             return 2;
-        else 
+        else
         {
             // Read the offsize field
             int indexOffSize = getCard8();
@@ -1597,12 +1588,12 @@ public class CFFFontSubset extends CFFFont {
             return 2+1+(count+1)*indexOffSize+size;
         }
     }
-    
+
     /**
      * The function creates a private dict for a font that was not CID
-     * All the keys are copied as is except for the subrs key 
+     * All the keys are copied as is except for the subrs key
      * @param Font the font
-     * @param Subr The OffsetItem for the subrs of the private 
+     * @param Subr The OffsetItem for the subrs of the private
      */
     void CreateNonCIDPrivate(int Font,OffsetItem Subr)
     {
@@ -1613,21 +1604,21 @@ public class CFFFontSubset extends CFFFont {
             int p1 = getPosition();
             getDictItem();
             int p2 = getPosition();
-            // If the dictItem is the "Subrs" then, 
+            // If the dictItem is the "Subrs" then,
             // use marker for offset and write operator number
             if (key=="Subrs") {
-                OutputList.addLast(Subr);
-                OutputList.addLast(new UInt8Item((char)19)); // Subrs
+                outputList.addLast(Subr);
+                outputList.addLast(new UInt8Item((char)19)); // Subrs
             }
             // Else copy the entire range
             else
-                OutputList.addLast(new RangeItem(buf,p1,p2-p1));
+                outputList.addLast(new RangeItem(buf,p1,p2-p1));
         }
     }
-    
+
     /**
      * the function marks the beginning of the subrs index and adds the subsetted subrs
-     * index to the output list. 
+     * index to the output list.
      * @param Font the font
      * @param PrivateBase IndexBaseItem for the private that's referencing to the subrs
      * @param Subrs OffsetItem for the subrs
@@ -1635,8 +1626,8 @@ public class CFFFontSubset extends CFFFont {
     void CreateNonCIDSubrs(int Font,IndexBaseItem PrivateBase,OffsetItem Subrs)
     {
         // Mark the beginning of the Subrs index
-        OutputList.addLast(new SubrMarkerItem(Subrs,PrivateBase));
+        outputList.addLast(new SubrMarkerItem(Subrs,PrivateBase));
         // Put the subsetted new subrs index
-        OutputList.addLast(new RangeItem(new RandomAccessFileOrArray(NewSubrsIndexNonCID),0,NewSubrsIndexNonCID.length));
-    }    
+        outputList.addLast(new RangeItem(new RandomAccessFileOrArray(newSubrsIndexNonCID),0,newSubrsIndexNonCID.length));
+    }
 }
