@@ -52,10 +52,10 @@ package com.lowagie.text.pdf;
 import java.awt.font.GlyphVector;
 import java.io.UnsupportedEncodingException;
 import java.util.HashMap;
+import java.util.Map;
 
-
-import com.lowagie.text.Utilities;
 import com.lowagie.text.ExceptionConverter;
+import com.lowagie.text.Utilities;
 
 /**
  * Each font in the document will have an instance of this class
@@ -64,22 +64,22 @@ import com.lowagie.text.ExceptionConverter;
  * @author  Paulo Soares (psoares@consiste.pt)
  */
 class FontDetails {
-    
+
     /**
      * The indirect reference to this font
-     */    
+     */
     PdfIndirectReference indirectReference;
     /**
      * The font name that appears in the document body stream
-     */    
+     */
     PdfName fontName;
     /**
      * The font
-     */    
+     */
     BaseFont baseFont;
     /**
      * The font if it's an instance of <CODE>TrueTypeFontUnicode</CODE>
-     */    
+     */
     TrueTypeFontUnicode ttu;
     /**
      * The font if it's an instance of <CODE>CJKFont</CODE>
@@ -92,26 +92,26 @@ class FontDetails {
     /**
      * The map used with double byte encodings. The key is Integer(glyph) and
      * the value is int[]{glyph, width, Unicode code}
-     */    
-    HashMap longTag;
+     */
+    Map<Integer,int[]> longTag;
     /**
      * IntHashtable with CIDs of CJK glyphs that are used in the text.
      */
     IntHashtable cjkTag;
     /**
      * The font type
-     */    
+     */
     int fontType;
     /**
      * <CODE>true</CODE> if the font is symbolic
-     */    
+     */
     boolean symbolic;
     /**
      * Indicates if only a subset of the glyphs and widths for that particular
      * encoding should be included in the document.
      */
     protected boolean subset = true;
-    
+
     /**
      * Each font used in a document has an instance of this class.
      * This class stores the characters used in the document and other
@@ -135,44 +135,44 @@ class FontDetails {
                 cjkFont = (CJKFont)baseFont;
                 break;
             case BaseFont.FONT_TYPE_TTUNI:
-                longTag = new HashMap();
+                longTag = new HashMap<>();
                 ttu = (TrueTypeFontUnicode)baseFont;
                 symbolic = baseFont.isFontSpecific();
                 break;
         }
     }
-    
+
     /**
      * Gets the indirect reference to this font.
      * @return the indirect reference to this font
-     */    
+     */
     PdfIndirectReference getIndirectReference() {
         return indirectReference;
     }
-    
+
     /**
      * Gets the font name as it appears in the document body.
      * @return the font name
-     */    
+     */
     PdfName getFontName() {
         return fontName;
     }
-    
+
     /**
      * Gets the <CODE>BaseFont</CODE> of this font.
      * @return the <CODE>BaseFont</CODE> of this font
-     */    
+     */
     BaseFont getBaseFont() {
         return baseFont;
     }
-    
+
     /**
      * Converts the text into bytes to be placed in the document.
      * The conversion is done according to the font and the encoding and the characters
      * used are stored.
      * @param text the text to convert
      * @return the conversion
-     */    
+     */
     byte[] convertToBytes(String text) {
         byte[] b = null;
         switch (fontType) {
@@ -210,7 +210,7 @@ class FontDetails {
                             metrics = ttu.getMetricsTT(b[k] & 0xff);
                             if (metrics == null)
                                 continue;
-                            longTag.put(new Integer(metrics[0]), new int[]{metrics[0], metrics[1], ttu.getUnicodeDifferences(b[k] & 0xff)});
+                            longTag.put(Integer.valueOf(metrics[0]), new int[]{metrics[0], metrics[1], ttu.getUnicodeDifferences(b[k] & 0xff)});
                             glyph[i++] = (char)metrics[0];
                         }
                     }
@@ -228,7 +228,7 @@ class FontDetails {
                             if (metrics == null)
                                 continue;
                             int m0 = metrics[0];
-                            Integer gl = new Integer(m0);
+                            Integer gl = Integer.valueOf(m0);
                             if (!longTag.containsKey(gl))
                                 longTag.put(gl, new int[]{m0, metrics[1], val});
                             glyph[i++] = (char)m0;
@@ -245,7 +245,7 @@ class FontDetails {
         }
         return b;
     }
-    
+
     byte[] convertToBytes(GlyphVector glyphVector) {
         if (fontType != BaseFont.FONT_TYPE_TTUNI || symbolic) {
             throw new UnsupportedOperationException("Only supported for True Type Unicode fonts");
@@ -280,12 +280,12 @@ class FontDetails {
             throw new ExceptionConverter(e);
         }
     }
-    
-    
+
+
     /**
      * Writes the font definition to the document.
      * @param writer the <CODE>PdfWriter</CODE> of this document
-     */    
+     */
     void writeFont(PdfWriter writer) {
         try {
             switch (fontType) {
@@ -308,7 +308,7 @@ class FontDetails {
                         firstChar = 255;
                         lastChar = 255;
                     }
-                    baseFont.writeFont(writer, indirectReference, new Object[]{new Integer(firstChar), new Integer(lastChar), shortTag, Boolean.valueOf(subset)});
+                    baseFont.writeFont(writer, indirectReference, new Object[]{Integer.valueOf(firstChar), Integer.valueOf(lastChar), shortTag, Boolean.valueOf(subset)});
                     break;
                 }
                 case BaseFont.FONT_TYPE_CJK:
@@ -323,7 +323,7 @@ class FontDetails {
             throw new ExceptionConverter(e);
         }
     }
-    
+
     /**
      * Indicates if all the glyphs and widths for that particular
      * encoding should be included in the document.
@@ -332,7 +332,7 @@ class FontDetails {
     public boolean isSubset() {
         return subset;
     }
-    
+
     /**
      * Indicates if all the glyphs and widths for that particular
      * encoding should be included in the document. Set to <CODE>false</CODE>
