@@ -51,7 +51,6 @@ package com.lowagie.text.pdf;
 
 import java.awt.Color;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.Map;
 
 import com.lowagie.text.Chunk;
@@ -72,16 +71,12 @@ import com.lowagie.text.Utilities;
  */
 
 public class PdfChunk {
-
-    private static final char[] singleSpace = {' '};
+    private static final char[] singleSpace = { ' ' };
     private static final PdfChunk[] thisChunk = new PdfChunk[1];
     private static final float ITALIC_ANGLE = 0.21256f;
-/** The allowed attributes in variable <CODE>attributes</CODE>. */
-    private static final HashMap keysAttributes = new HashMap();
-    
-/** The allowed attributes in variable <CODE>noStroke</CODE>. */
-    private static final HashMap keysNoStroke = new HashMap();
-    
+
+    /** The allowed attributes in variable <CODE>attributes</CODE>. */
+    private static final Map<String,Object> keysAttributes = new HashMap<>();
     static {
         keysAttributes.put(Chunk.ACTION, null);
         keysAttributes.put(Chunk.UNDERLINE, null);
@@ -98,26 +93,31 @@ public class PdfChunk {
         keysAttributes.put(Chunk.SEPARATOR, null);
         keysAttributes.put(Chunk.TAB, null);
         keysAttributes.put(Chunk.CHAR_SPACING, null);
+    }
+
+    /** The allowed attributes in variable <CODE>noStroke</CODE>. */
+    private static final Map<String,Object> keysNoStroke = new HashMap<>();
+    static {
         keysNoStroke.put(Chunk.SUBSUPSCRIPT, null);
         keysNoStroke.put(Chunk.SPLITCHARACTER, null);
         keysNoStroke.put(Chunk.HYPHENATION, null);
         keysNoStroke.put(Chunk.TEXTRENDERMODE, null);
     }
-    
+
     // membervariables
 
     /** The value of this object. */
     protected String value = PdfObject.NOTHING;
-    
+
     /** The encoding. */
     protected String encoding = BaseFont.WINANSI;
-    
-    
+
+
 /** The font for this <CODE>PdfChunk</CODE>. */
     protected PdfFont font;
-    
+
     protected BaseFont baseFont;
-    
+
     protected SplitCharacter splitCharacter;
 /**
  * Metric attributes.
@@ -125,25 +125,25 @@ public class PdfChunk {
  * This attributes require the measurement of characters widths when rendering
  * such as underline.
  */
-    protected HashMap attributes = new HashMap();
-    
+    protected Map<String,Object> attributes = new HashMap<>();
+
 /**
  * Non metric attributes.
  * <P>
  * This attributes do not require the measurement of characters widths when rendering
  * such as Color.
  */
-    protected HashMap noStroke = new HashMap();
-    
+    protected Map<String,Object> noStroke = new HashMap<>();
+
 /** <CODE>true</CODE> if the chunk split was cause by a newline. */
     protected boolean newlineSplit;
-    
+
 /** The image in this <CODE>PdfChunk</CODE>, if it has one */
     protected Image image;
-    
+
 /** The offset in the x direction for the image */
     protected float offsetX;
-    
+
 /** The offset in the y direction for the image */
     protected float offsetY;
 
@@ -151,14 +151,14 @@ public class PdfChunk {
     protected boolean changeLeading = false;
 
     // constructors
-    
+
 /**
  * Constructs a <CODE>PdfChunk</CODE>-object.
  *
  * @param string the content of the <CODE>PdfChunk</CODE>-object
  * @param other Chunk with the same style you want for the new Chunk
  */
-    
+
     PdfChunk(String string, PdfChunk other) {
         thisChunk[0] = this;
         value = string;
@@ -180,18 +180,18 @@ public class PdfChunk {
         if (splitCharacter == null)
             splitCharacter = DefaultSplitCharacter.DEFAULT;
     }
-    
+
 /**
  * Constructs a <CODE>PdfChunk</CODE>-object.
  *
  * @param chunk the original <CODE>Chunk</CODE>-object
  * @param action the <CODE>PdfAction</CODE> if the <CODE>Chunk</CODE> comes from an <CODE>Anchor</CODE>
  */
-    
+
     PdfChunk(Chunk chunk, PdfAction action) {
         thisChunk[0] = this;
         value = chunk.getContent();
-        
+
         Font f = chunk.getFont();
         float size = f.getSize();
         if (size == Font.UNDEFINED)
@@ -208,18 +208,17 @@ public class PdfChunk {
         else {
             // bold simulation
             if ((style & Font.BOLD) != 0)
-                attributes.put(Chunk.TEXTRENDERMODE, new Object[]{new Integer(PdfContentByte.TEXT_RENDER_MODE_FILL_STROKE), new Float(size / 30f), null});
+                attributes.put(Chunk.TEXTRENDERMODE, new Object[]{Integer.valueOf(PdfContentByte.TEXT_RENDER_MODE_FILL_STROKE), new Float(size / 30f), null});
             // italic simulation
             if ((style & Font.ITALIC) != 0)
                 attributes.put(Chunk.SKEW, new float[]{0, ITALIC_ANGLE});
         }
         font = new PdfFont(baseFont, size);
         // other style possibilities
-        HashMap attr = chunk.getAttributes();
+        Map<String,Object> attr = chunk.getAttributes();
         if (attr != null) {
-            for (Iterator i = attr.entrySet().iterator(); i.hasNext();) {
-                Map.Entry entry = (Map.Entry) i.next();
-                Object name = entry.getKey();
+            for (Map.Entry<String,Object> entry : attr.entrySet()) {
+                String name = entry.getKey();
                 if (keysAttributes.containsKey(name)) {
                     attributes.put(name, entry.getValue());
                 }
@@ -266,15 +265,15 @@ public class PdfChunk {
         if (splitCharacter == null)
             splitCharacter = DefaultSplitCharacter.DEFAULT;
     }
-    
+
     // methods
-    
+
     /** Gets the Unicode equivalent to a CID.
-     * The (inexistent) CID <FF00> is translated as '\n'. 
+     * The (inexistent) CID <FF00> is translated as '\n'.
      * It has only meaning with CJK fonts with Identity encoding.
      * @param c the CID code
      * @return the Unicode equivalent
-     */    
+     */
     public int getUnicodeEquivalent(int c) {
         return baseFont.getUnicodeEquivalent(c);
     }
@@ -288,7 +287,7 @@ public class PdfChunk {
         }
         return start;
     }
-    
+
 /**
  * Splits this <CODE>PdfChunk</CODE> if it's too long for the given width.
  * <P>
@@ -297,14 +296,14 @@ public class PdfChunk {
  * @param        width        a given width
  * @return        the <CODE>PdfChunk</CODE> that doesn't fit into the width.
  */
-    
+
     PdfChunk split(float width) {
         newlineSplit = false;
         if (image != null) {
             if (image.getScaledWidth() > width) {
                 PdfChunk pc = new PdfChunk(Chunk.OBJECT_REPLACEMENT_CHARACTER, this);
                 value = "";
-                attributes = new HashMap();
+                attributes = new HashMap<>();
                 image = null;
                 font = PdfFont.getDefaultFont();
                 return pc;
@@ -316,7 +315,7 @@ public class PdfChunk {
         int currentPosition = 0;
         int splitPosition = -1;
         float currentWidth = 0;
-        
+
         // loop over all the characters of a string
         // or until the totalWidth is reached
         int lastSpace = -1;
@@ -392,7 +391,7 @@ public class PdfChunk {
                 currentPosition++;
             }
         }
-        
+
         // if all the characters fit in the total width, null is returned (there is no overflow)
         if (currentPosition == length) {
             return null;
@@ -424,7 +423,7 @@ public class PdfChunk {
         PdfChunk pc = new PdfChunk(returnValue, this);
         return pc;
     }
-    
+
 /**
  * Truncates this <CODE>PdfChunk</CODE> if it's too long for the given width.
  * <P>
@@ -433,7 +432,7 @@ public class PdfChunk {
  * @param        width        a given width
  * @return        the <CODE>PdfChunk</CODE> that doesn't fit into the width.
  */
-    
+
     PdfChunk truncate(float width) {
         if (image != null) {
             if (image.getScaledWidth() > width) {
@@ -447,10 +446,10 @@ public class PdfChunk {
             else
                 return null;
         }
-        
+
         int currentPosition = 0;
         float currentWidth = 0;
-        
+
         // it's no use trying to split if there isn't even enough place for a space
         if (width < font.width()) {
             String returnValue = value.substring(1);
@@ -458,12 +457,11 @@ public class PdfChunk {
             PdfChunk pc = new PdfChunk(returnValue, this);
             return pc;
         }
-        
+
         // loop over all the characters of a string
         // or until the totalWidth is reached
         int length = value.length();
         boolean surrogate = false;
-        char character;
         while (currentPosition < length) {
             // the width of every character is added to the currentWidth
             surrogate = Utilities.isSurrogatePair(value, currentPosition);
@@ -477,12 +475,12 @@ public class PdfChunk {
                 currentPosition++;
             currentPosition++;
         }
-        
+
         // if all the characters fit in the total width, null is returned (there is no overflow)
         if (currentPosition == length) {
             return null;
         }
-        
+
         // otherwise, the string has to be truncated
         //currentPosition -= 2;
         // we have to chop off minimum 1 character from the chunk
@@ -496,35 +494,35 @@ public class PdfChunk {
         PdfChunk pc = new PdfChunk(returnValue, this);
         return pc;
     }
-    
+
     // methods to retrieve the membervariables
-    
+
 /**
  * Returns the font of this <CODE>Chunk</CODE>.
  *
  * @return    a <CODE>PdfFont</CODE>
  */
-    
+
     PdfFont font() {
         return font;
     }
-    
+
 /**
  * Returns the color of this <CODE>Chunk</CODE>.
  *
  * @return    a <CODE>Color</CODE>
  */
-    
+
     Color color() {
         return (Color)noStroke.get(Chunk.COLOR);
     }
-    
+
 /**
  * Returns the width of this <CODE>PdfChunk</CODE>.
  *
  * @return    a width
  */
-    
+
     float width() {
         if (isAttribute(Chunk.CHAR_SPACING)) {
             Float cs = (Float) getAttribute(Chunk.CHAR_SPACING);
@@ -532,17 +530,17 @@ public class PdfChunk {
         }
         return font.width(value);
     }
-    
+
 /**
  * Checks if the <CODE>PdfChunk</CODE> split was caused by a newline.
  * @return <CODE>true</CODE> if the <CODE>PdfChunk</CODE> split was caused by a newline.
  */
-    
+
     public boolean isNewlineSplit()
     {
         return newlineSplit;
     }
-    
+
 /**
  * Gets the width of the <CODE>PdfChunk</CODE> taking into account the
  * extra character and word spacing.
@@ -550,7 +548,7 @@ public class PdfChunk {
  * @param wordSpacing the extra word spacing
  * @return the calculated width
  */
-    
+
     public float getWidthCorrected(float charSpacing, float wordSpacing)
     {
         if (image != null) {
@@ -562,7 +560,7 @@ public class PdfChunk {
             ++numberOfSpaces;
         return width() + (value.length() * charSpacing + numberOfSpaces * wordSpacing);
     }
-    
+
     /**
      * Gets the text displacement relative to the baseline.
      * @return a displacement in points
@@ -574,12 +572,12 @@ public class PdfChunk {
         }
         return 0.0f;
     }
-    
+
 /**
  * Trims the last space.
  * @return the width of the space trimmed, otherwise 0
  */
-    
+
     public float trimLastSpace()
     {
         BaseFont ft = font.getFont();
@@ -596,7 +594,7 @@ public class PdfChunk {
             }
         }
         return 0;
-    }    
+    }
     public float trimFirstSpace()
     {
         BaseFont ft = font.getFont();
@@ -614,44 +612,44 @@ public class PdfChunk {
         }
         return 0;
     }
-    
+
 /**
  * Gets an attribute. The search is made in <CODE>attributes</CODE>
  * and <CODE>noStroke</CODE>.
  * @param name the attribute key
  * @return the attribute value or null if not found
  */
-    
+
     Object getAttribute(String name)
     {
         if (attributes.containsKey(name))
             return attributes.get(name);
         return noStroke.get(name);
     }
-    
+
 /**
  *Checks if the attribute exists.
  * @param name the attribute key
  * @return <CODE>true</CODE> if the attribute exists
  */
-    
+
     boolean isAttribute(String name)
     {
         if (attributes.containsKey(name))
             return true;
         return noStroke.containsKey(name);
     }
-    
+
 /**
  * Checks if this <CODE>PdfChunk</CODE> needs some special metrics handling.
  * @return <CODE>true</CODE> if this <CODE>PdfChunk</CODE> needs some special metrics handling.
  */
-    
+
     boolean isStroked()
     {
         return (!attributes.isEmpty());
     }
-    
+
     /**
      * Checks if this <CODE>PdfChunk</CODE> is a Separator Chunk.
      * @return    true if this chunk is a separator.
@@ -660,7 +658,7 @@ public class PdfChunk {
     boolean isSeparator() {
         return isAttribute(Chunk.SEPARATOR);
     }
-    
+
     /**
      * Checks if this <CODE>PdfChunk</CODE> is a horizontal Separator Chunk.
      * @return    true if this chunk is a horizontal separator.
@@ -673,7 +671,7 @@ public class PdfChunk {
         }
         return false;
     }
-    
+
     /**
      * Checks if this <CODE>PdfChunk</CODE> is a tab Chunk.
      * @return    true if this chunk is a separator.
@@ -682,7 +680,7 @@ public class PdfChunk {
     boolean isTab() {
         return isAttribute(Chunk.TAB);
     }
-    
+
     /**
      * Correction for the tab position based on the left starting position.
      * @param    newValue    the new value for the left X.
@@ -694,72 +692,72 @@ public class PdfChunk {
             attributes.put(Chunk.TAB, new Object[]{o[0], o[1], o[2], new Float(newValue)});
         }
     }
-    
+
 /**
  * Checks if there is an image in the <CODE>PdfChunk</CODE>.
  * @return <CODE>true</CODE> if an image is present
  */
-    
+
     boolean isImage()
     {
         return image != null;
     }
-    
+
 /**
  * Gets the image in the <CODE>PdfChunk</CODE>.
  * @return the image or <CODE>null</CODE>
  */
-    
+
     Image getImage()
     {
         return image;
     }
-    
+
 /**
  * Sets the image offset in the x direction
  * @param  offsetX the image offset in the x direction
  */
-    
+
     void setImageOffsetX(float offsetX)
     {
         this.offsetX = offsetX;
     }
-    
+
 /**
  * Gets the image offset in the x direction
  * @return the image offset in the x direction
  */
-    
+
     float getImageOffsetX()
     {
         return offsetX;
     }
-    
+
 /**
  * Sets the image offset in the y direction
  * @param  offsetY the image offset in the y direction
  */
-    
+
     void setImageOffsetY(float offsetY)
     {
         this.offsetY = offsetY;
     }
-    
+
 /**
  * Gets the image offset in the y direction
  * @return Gets the image offset in the y direction
  */
-    
+
     float getImageOffsetY()
     {
         return offsetY;
     }
-    
+
 /**
  * sets the value.
  * @param value content of the Chunk
  */
-    
+
     void setValue(String value)
     {
         this.value = value;
@@ -776,17 +774,17 @@ public class PdfChunk {
      * Tells you if this string is in Chinese, Japanese, Korean or Identity-H.
      * @return true if the Chunk has a special encoding
      */
-    
+
     boolean isSpecialEncoding() {
         return encoding.equals(CJKFont.CJK_ENCODING) || encoding.equals(BaseFont.IDENTITY_H);
     }
-    
+
     /**
      * Gets the encoding of this string.
      *
      * @return        a <CODE>String</CODE>
      */
-    
+
     String getEncoding() {
         return encoding;
     }
@@ -794,7 +792,7 @@ public class PdfChunk {
     int length() {
         return value.length();
     }
-    
+
     int lengthUtf32() {
         if (!BaseFont.IDENTITY_H.equals(encoding))
             return value.length();
@@ -807,17 +805,17 @@ public class PdfChunk {
         }
         return total;
     }
-    
+
     boolean isExtSplitCharacter(int start, int current, int end, char[] cc, PdfChunk[] ck) {
         return splitCharacter.isSplitCharacter(start, current, end, cc, ck);
     }
-    
+
 /**
  * Removes all the <VAR>' '</VAR> and <VAR>'-'</VAR>-characters on the right of a <CODE>String</CODE>.
  * <P>
  * @param    string        the <CODE>String<CODE> that has to be trimmed.
  * @return    the trimmed <CODE>String</CODE>
- */    
+ */
     String trim(String string) {
         BaseFont ft = font.getFont();
         if (ft.getFontType() == BaseFont.FONT_TYPE_CJK && ft.getUnicodeEquivalent(' ') != ' ') {
@@ -836,7 +834,7 @@ public class PdfChunk {
     public boolean changeLeading() {
         return changeLeading;
     }
-    
+
     float getCharWidth(int c) {
         if (noPrint(c))
             return 0;
@@ -846,9 +844,9 @@ public class PdfChunk {
         }
         return font.width(c);
     }
-    
+
     public static boolean noPrint(int c) {
         return ((c >= 0x200b && c <= 0x200f) || (c >= 0x202a && c <= 0x202e));
     }
-    
+
 }
