@@ -50,8 +50,11 @@
 package com.lowagie.text.pdf;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
-import java.util.Iterator;
+import java.util.HashSet;
+import java.util.Map;
+
 import com.lowagie.text.error_messages.MessageLocalization;
 /**
  * Instance of PdfReader in each output document.
@@ -64,53 +67,53 @@ class PdfReaderInstance {
     int[] myXref;
     PdfReader reader;
     RandomAccessFileOrArray file;
-    HashMap importedPages = new HashMap();
+    Map<Integer,PdfImportedPage> importedPages = new HashMap<>();
     PdfWriter writer;
-    HashMap visited = new HashMap();
-    ArrayList nextRound = new ArrayList();
-    
+    Collection<Integer> visited = new HashSet<>();
+    ArrayList<Integer> nextRound = new ArrayList<>();
+
     PdfReaderInstance(PdfReader reader, PdfWriter writer) {
         this.reader = reader;
         this.writer = writer;
         file = reader.getSafeFile();
         myXref = new int[reader.getXrefSize()];
     }
-    
+
     PdfReader getReader() {
         return reader;
     }
-    
+
     PdfImportedPage getImportedPage(int pageNumber) {
         if (!reader.isOpenedWithFullPermissions())
             throw new IllegalArgumentException(MessageLocalization.getComposedMessage("pdfreader.not.opened.with.owner.password"));
         if (pageNumber < 1 || pageNumber > reader.getNumberOfPages())
             throw new IllegalArgumentException(MessageLocalization.getComposedMessage("invalid.page.number.1", pageNumber));
-        Integer i = new Integer(pageNumber);
-        PdfImportedPage pageT = (PdfImportedPage)importedPages.get(i);
+        Integer i = Integer.valueOf(pageNumber);
+        PdfImportedPage pageT = importedPages.get(i);
         if (pageT == null) {
             pageT = new PdfImportedPage(this, writer, pageNumber);
             importedPages.put(i, pageT);
         }
         return pageT;
     }
-    
+
     int getNewObjectNumber(int number, int generation) {
         if (myXref[number] == 0) {
             myXref[number] = writer.getIndirectReferenceNumber();
-            nextRound.add(new Integer(number));
+            nextRound.add(Integer.valueOf(number));
         }
         return myXref[number];
     }
-    
+
     RandomAccessFileOrArray getReaderFile() {
         return file;
     }
-    
+
     PdfObject getResources(int pageNumber) {
         PdfObject obj = PdfReader.getPdfObjectRelease(reader.getPageNRelease(pageNumber).get(PdfName.RESOURCES));
         return obj;
     }
-    
+
     /**
      * Gets the content stream of a page as a PdfStream object.
      * @param    pageNumber            the page of which you want the stream
@@ -134,7 +137,7 @@ class PdfReaderInstance {
         dic.put(PdfName.RESOURCES, PdfReader.getPdfObjectRelease(page.get(PdfName.RESOURCES)));
         dic.put(PdfName.TYPE, PdfName.XOBJECT);
         dic.put(PdfName.SUBTYPE, PdfName.FORM);
-        PdfImportedPage impPage = (PdfImportedPage)importedPages.get(new Integer(pageNumber));
+        PdfImportedPage impPage = importedPages.get(Integer.valueOf(pageNumber));
         dic.put(PdfName.BBOX, new PdfRectangle(impPage.getBoundingBox()));
         PdfArray matrix = impPage.getMatrix();
         if (matrix == null)
@@ -152,27 +155,25 @@ class PdfReaderInstance {
         }
         return stream;
     }
-    
+
     void writeAllVisited() throws IOException {
         while (!nextRound.isEmpty()) {
-            ArrayList vec = nextRound;
-            nextRound = new ArrayList();
+            ArrayList<Integer> vec = nextRound = new ArrayList<>();
             for (int k = 0; k < vec.size(); ++k) {
-                Integer i = (Integer)vec.get(k);
-                if (!visited.containsKey(i)) {
-                    visited.put(i, null);
+                Integer i = vec.get(k);
+                if (!visited.contains(i)) {
+                    visited.add(i);
                     int n = i.intValue();
                     writer.addToBody(reader.getPdfObjectRelease(n), myXref[n]);
                 }
             }
         }
     }
-    
+
     void writeAllPages() throws IOException {
         try {
             file.reOpen();
-            for (Iterator it = importedPages.values().iterator(); it.hasNext();) {
-                PdfImportedPage ip = (PdfImportedPage)it.next();
+            for (PdfImportedPage ip : importedPages.values()) {
                 writer.addToBody(ip.getFormXObject(writer.getCompressionLevel()), ip.getIndirectReference());
             }
             writeAllVisited();
