@@ -54,7 +54,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 
@@ -68,15 +67,15 @@ import com.lowagie.text.error_messages.MessageLocalization;
  * as Thai.
  * @author  Paulo Soares (psoares@consiste.pt)
  */
-class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
-    
+class TrueTypeFontUnicode extends TrueTypeFont implements Comparator<int[]> {
+
     /**
      * <CODE>true</CODE> if the encoding is vertical.
-     */    
+     */
     boolean vertical = false;
-    
+
     Map<Integer, Integer> inverseCmap;
-    
+
     /**
      * Creates a new TrueType font addressed by Unicode characters. The font
      * will always be embedded.
@@ -122,11 +121,11 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
             throw new DocumentException(MessageLocalization.getComposedMessage("1.2.is.not.a.ttf.font.file", fileName, style));
         vertical = enc.endsWith("V");
     }
-    
+
     void readCMaps() throws DocumentException, IOException {
         super.readCMaps();
 
-        Map cmap = null;
+        Map<Integer,int[]> cmap = null;
         if (cmapExt != null) {
             cmap = cmapExt;
         } else if (cmap31 != null) {
@@ -134,21 +133,20 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
         }
 
         if (cmap != null) {
-            inverseCmap = new HashMap<Integer, Integer>();
-            for (Iterator iterator = cmap.entrySet().iterator(); iterator.hasNext();) {
-                Map.Entry entry = (Map.Entry) iterator.next();
-                Integer code = (Integer) entry.getKey();
-                int[] metrics = (int[]) entry.getValue();
-                inverseCmap.put(metrics[0], code);
+            inverseCmap = new HashMap<>();
+            for (Map.Entry<Integer,int[]> entry : cmap.entrySet()) {
+                Integer code = entry.getKey();
+                int[] metrics = entry.getValue();
+                inverseCmap.put(Integer.valueOf(metrics[0]), code);
             }
         }
     }
-    
+
     protected Integer getCharacterCode(int code) {
-        return inverseCmap == null ? null : inverseCmap.get(code);
+        return inverseCmap == null ? null : inverseCmap.get(Integer.valueOf(code));
     }
-    
-    
+
+
     /**
      * Gets the width of a <CODE>char</CODE> in normalized 1000 units.
      * @param char1 the unicode <CODE>char</CODE> to get the width of
@@ -167,7 +165,7 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
             return getRawWidth(char1, encoding);
         }
     }
-    
+
     /**
      * Gets the width of a <CODE>String</CODE> in normalized 1000 units.
      * @param text the <CODE>String</CODE> to get the width of
@@ -204,7 +202,7 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
      * @param metrics metrics[0] contains the glyph index and metrics[2]
      * contains the Unicode code
      * @return the stream representing this CMap or <CODE>null</CODE>
-     */    
+     */
     private PdfStream getToUnicode(Object[] metrics) {
         metrics = filterCmapMetrics(metrics);
         if (metrics.length == 0)
@@ -247,13 +245,13 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
         stream.flateCompress(compressionLevel);
         return stream;
     }
-    
-    private Object[] filterCmapMetrics(Object[] metrics) {
+
+    private static Object[] filterCmapMetrics(Object[] metrics) {
         if (metrics.length == 0) {
             return metrics;
         }
 
-        List<int[]> cmapMetrics = new ArrayList<int[]>(metrics.length);
+        List<int[]> cmapMetrics = new ArrayList<>(metrics.length);
         for (int i = 0; i < metrics.length; i++) {
             int[] metric = (int[]) metrics[i];
             // PdfContentByte.showText(GlyphVector) uses glyphs that might not
@@ -271,16 +269,16 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
 
         return cmapMetrics.toArray();
     }
-    
+
     private static String toHex4(int n) {
         String s = "0000" + Integer.toHexString(n);
         return s.substring(s.length() - 4);
     }
-    
+
     /** Gets an hex string in the format "&lt;HHHH&gt;".
      * @param n the number
      * @return the hex string
-     */    
+     */
     static String toHex(int n) {
         if (n < 0x10000)
             return "<" + toHex4(n) + ">";
@@ -289,13 +287,13 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
         int low = (n % 0x400) + 0xdc00;
         return "[<" + toHex4(high) + toHex4(low) + ">]";
     }
-    
+
     /** Generates the CIDFontTyte2 dictionary.
      * @param fontDescriptor the indirect reference to the font descriptor
      * @param subsetPrefix the subset prefix
      * @param metrics the horizontal width metrics
      * @return a stream
-     */    
+     */
     private PdfDictionary getCIDFontType2(PdfIndirectReference fontDescriptor, String subsetPrefix, Object[] metrics) {
         PdfDictionary dic = new PdfDictionary(PdfName.FONT);
         // sivan; cff
@@ -344,13 +342,13 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
         }
         return dic;
     }
-    
+
     /** Generates the font dictionary.
      * @param descendant the descendant dictionary
      * @param subsetPrefix the subset prefix
      * @param toUnicode the ToUnicode stream
      * @return the stream
-     */    
+     */
     private PdfDictionary getFontBaseType(PdfIndirectReference descendant, String subsetPrefix, PdfIndirectReference toUnicode) {
         PdfDictionary dic = new PdfDictionary(PdfName.FONT);
 
@@ -365,7 +363,7 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
         dic.put(PdfName.ENCODING, new PdfName(encoding));
         dic.put(PdfName.DESCENDANTFONTS, new PdfArray(descendant));
         if (toUnicode != null)
-            dic.put(PdfName.TOUNICODE, toUnicode);  
+            dic.put(PdfName.TOUNICODE, toUnicode);
         return dic;
     }
 
@@ -373,19 +371,19 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
      * @param o1 the first element
      * @param o2 the second element
      * @return the comparison
-     */    
-    public int compare(Object o1, Object o2) {
-        int m1 = ((int[])o1)[0];
-        int m2 = ((int[])o2)[0];
+     */
+    public int compare(int[] o1, int[] o2) {
+        int m1 = o1[0];
+        int m2 = o2[0];
         if (m1 < m2)
             return -1;
         if (m1 == m2)
             return 0;
         return 1;
     }
-    
+
     private static final byte[] rotbits = {(byte)0x80,(byte)0x40,(byte)0x20,(byte)0x10,(byte)0x08,(byte)0x04,(byte)0x02,(byte)0x01};
-    
+
     /** Outputs to the writer the font dictionaries and streams.
      * @param writer the writer for this document
      * @param ref the font indirect reference
@@ -423,7 +421,7 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
         if (cff) {
             byte[] b = readCffFont();
             if (subset || subsetRanges != null) {
-                CFFFontSubset cff = new CFFFontSubset(new RandomAccessFileOrArray(b),longTag);
+                CFFFontSubset cff = new CFFFontSubset(new RandomAccessFileOrArray(b), longTag);
                 b = cff.Process(cff.getNames()[0]);
             }
             pobj = new StreamFont(b, "CIDFontType0C", compressionLevel);
@@ -456,7 +454,7 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
 
         pobj = getToUnicode(metrics);
         PdfIndirectReference toUnicodeRef = null;
-        
+
         if (pobj != null) {
             obj = writer.addToBody(pobj);
             toUnicodeRef = obj.getIndirectReference();
@@ -465,7 +463,7 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
         pobj = getFontBaseType(ind_font, subsetPrefix, toUnicodeRef);
         writer.addToBody(pobj, ref);
     }
-    
+
     /**
      * Returns a PdfStream object with the full font program.
      * @return    a PdfStream with the font program
@@ -477,11 +475,11 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
         }
         return super.getFullFontStream();
     }
-    
+
     /** A forbidden operation. Will throw a null pointer exception.
      * @param text the text
      * @return always <CODE>null</CODE>
-     */    
+     */
     byte[] convertToBytes(String text) {
         return null;
     }
@@ -493,11 +491,11 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
     /** Gets the glyph index and metrics for a character.
      * @param c the character
      * @return an <CODE>int</CODE> array with {glyph index, width}
-     */    
+     */
     public int[] getMetricsTT(int c) {
         if (cmapExt != null)
-            return (int[])cmapExt.get(new Integer(c));
-        HashMap map = null;
+            return cmapExt.get(Integer.valueOf(c));
+        Map<Integer,int[]> map = null;
         if (fontSpecific)
             map = cmap10;
         else
@@ -506,14 +504,14 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
             return null;
         if (fontSpecific) {
             if ((c & 0xffffff00) == 0 || (c & 0xffffff00) == 0xf000)
-                return (int[])map.get(new Integer(c & 0xff));
+                return map.get(Integer.valueOf(c & 0xff));
             else
                 return null;
         }
         else
-            return (int[])map.get(new Integer(c));
+            return map.get(Integer.valueOf(c));
     }
-    
+
     /**
      * Checks if a character exists in this font.
      * @param c the character to check
@@ -523,7 +521,7 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
     public boolean charExists(int c) {
         return getMetricsTT(c) != null;
     }
-    
+
     /**
      * Sets the character advance.
      * @param c the character
@@ -538,7 +536,7 @@ class TrueTypeFontUnicode extends TrueTypeFont implements Comparator{
         m[1] = advance;
         return true;
     }
-    
+
     public int[] getCharBBox(int c) {
         if (bboxes == null)
             return null;
