@@ -62,7 +62,7 @@ import com.lowagie.text.pdf.PdfWriter;
 
 /**
  * Class for an index.
- * 
+ *
  * @author Michael Niedermair
  */
 public class IndexEvents extends PdfPageEventHelper {
@@ -70,18 +70,18 @@ public class IndexEvents extends PdfPageEventHelper {
     /**
      * keeps the indextag with the pagenumber
      */
-    private Map indextag = new TreeMap();
+    private Map<String,Integer> indextag = new TreeMap<>();
 
     /**
      * All the text that is passed to this event, gets registered in the indexentry.
-     * 
+     *
      * @see com.lowagie.text.pdf.PdfPageEventHelper#onGenericTag(
      *      com.lowagie.text.pdf.PdfWriter, com.lowagie.text.Document,
      *      com.lowagie.text.Rectangle, java.lang.String)
      */
     public void onGenericTag(PdfWriter writer, Document document,
             Rectangle rect, String text) {
-        indextag.put(text, new Integer(writer.getPageNumber()));
+        indextag.put(text, Integer.valueOf(writer.getPageNumber()));
     }
 
     // --------------------------------------------------------------------
@@ -93,7 +93,7 @@ public class IndexEvents extends PdfPageEventHelper {
     /**
      * the list for the index entry
      */
-    private List indexentry = new ArrayList();
+    private List<Entry> indexentry = new ArrayList<>();
 
     /**
      * Create an index entry.
@@ -181,12 +181,8 @@ public class IndexEvents extends PdfPageEventHelper {
     /**
      * Comparator for sorting the index
      */
-    private Comparator comparator = new Comparator() {
-
-        public int compare(Object arg0, Object arg1) {
-            Entry en1 = (Entry) arg0;
-            Entry en2 = (Entry) arg1;
-
+    private Comparator<? super Entry> comparator = new Comparator<Entry>() {
+        public int compare(Entry en1, Entry en2) {
             int rt = 0;
             if (en1.getIn1() != null && en2.getIn1() != null) {
                 if ((rt = en1.getIn1().compareToIgnoreCase(en2.getIn1())) == 0) {
@@ -211,7 +207,7 @@ public class IndexEvents extends PdfPageEventHelper {
      * Set the comparator.
      * @param aComparator The comparator to set.
      */
-    public void setComparator(Comparator aComparator) {
+    public void setComparator(Comparator<? super Entry> aComparator) {
         comparator = aComparator;
     }
 
@@ -219,15 +215,14 @@ public class IndexEvents extends PdfPageEventHelper {
      * Returns the sorted list with the entries and the collected page numbers.
      * @return Returns the sorted list with the entries and the collected page numbers.
      */
-    public List getSortedEntries() {
-
-        Map grouped = new HashMap();
+    public List<Entry> getSortedEntries() {
+        Map<String, Entry> grouped = new HashMap<>();
 
         for (int i = 0; i < indexentry.size(); i++) {
-            Entry e = (Entry) indexentry.get(i);
+            Entry e = indexentry.get(i);
             String key = e.getKey();
 
-            Entry master = (Entry) grouped.get(key);
+            Entry master = grouped.get(key);
             if (master != null) {
                 master.addPageNumberAndTag(e.getPageNumber(), e.getTag());
             } else {
@@ -237,7 +232,7 @@ public class IndexEvents extends PdfPageEventHelper {
         }
 
         // copy to a list and sort it
-        List sorted = new ArrayList(grouped.values());
+        List<Entry> sorted = new ArrayList<>(grouped.values());
         Collections.sort(sorted, comparator);
         return sorted;
     }
@@ -275,12 +270,12 @@ public class IndexEvents extends PdfPageEventHelper {
         /**
          * the list of all page numbers.
          */
-        private List pagenumbers = new ArrayList();
+        private List<Integer> pagenumbers = new ArrayList<>();
 
         /**
          * the list of all tags.
          */
-        private List tags = new ArrayList();
+        private List<String> tags = new ArrayList<>();
 
         /**
          * Create a new object.
@@ -335,7 +330,7 @@ public class IndexEvents extends PdfPageEventHelper {
          */
         public int getPageNumber() {
             int rt = -1;
-            Integer i = (Integer) indextag.get(tag);
+            Integer i = indextag.get(tag);
             if (i != null) {
                 rt = i.intValue();
             }
@@ -348,7 +343,7 @@ public class IndexEvents extends PdfPageEventHelper {
          * @param tag
          */
         public void addPageNumberAndTag(final int number, final String tag) {
-            pagenumbers.add(new Integer(number));
+            pagenumbers.add(Integer.valueOf(number));
             tags.add(tag);
         }
 
@@ -364,7 +359,7 @@ public class IndexEvents extends PdfPageEventHelper {
          * Returns the pagenumbers.
          * @return Returns the pagenumbers.
          */
-        public List getPagenumbers() {
+        public List<Integer> getPagenumbers() {
             return pagenumbers;
         }
 
@@ -372,7 +367,7 @@ public class IndexEvents extends PdfPageEventHelper {
          * Returns the tags.
          * @return Returns the tags.
          */
-        public List getTags() {
+        public List<String> getTags() {
             return tags;
         }
 
